Show all results on scorecards, not just one line summary per rubber

--- a/live/club_webapps/bingham.html
+++ b/live/club_webapps/bingham.html
@@ -59,7 +59,7 @@
                 <a class="button slideup" id="infoButton" href="#about">About</a>
             </div>
 
-            <h1>Bingham</h1>
+            <h1 id="ourClubName">Bingham</h1>
 	    <div id="loader">
 	    	<div class="loader">
 			<img src="lib/loader.gif" alt="Loading cache..." width="31" height="31" />
@@ -104,7 +104,7 @@
                 <li class="arrow"><a href="#X4">Mixed 4 <small> Division 2A</small></a></li>
                 <li class="arrow"><a href="#X5">Mixed 5 <small> Division 2B</small></a></li>
                 <li class="arrow"><a href="#L1">Ladies 1 <small>Premier </small></a></li>
-                <li class="arrow"><a href="#L2">Ladies 2 <small>Premier </small></a></li>
+                <li class="arrow"><a href="#L2">Ladies 2 <small> Division 1</small></a></li>
                 <li class="arrow"><a href="#L3">Ladies 3 <small> Division 1</small></a></li>
             </ul>
         </div>
@@ -117,9 +117,9 @@
             <ul class="rounded">
                 <li class="arrow" id="M1-1"><a href="#match">Bingham 2  <small class="M1-1D"></small></a></li>
                 <li class="arrow" id="M1-2"><a href="#match">Byron 1  <small class="M1-2D"></small></a></li>
-                <li class="arrow" id="M1-3"><a href="#match">Forest 1  <small class="M1-3D"></small></a></li>
+                <li class="arrow" id="M1-3"><a href="#match">Byron 2  <small class="M1-3D"></small></a></li>
                 <li class="arrow" id="M1-4"><a href="#match">Rolls Royce 1  <small class="M1-4D"></small></a></li>
-                <li class="arrow" id="M1-5"><a href="#match">Rolls Royce 2  <small class="M1-5D"></small></a></li>
+                <li class="arrow" id="M1-5"><a href="#match">University 1  <small class="M1-5D"></small></a></li>
                 <li class="arrow" id="M1-6"><a href="#match">West Bridgford &amp; LE 1  <small class="M1-6D"></small></a></li>
                 <li class="arrow" id="M1-7"><a href="#match">West Bridgford &amp; LE 2  <small class="M1-7D"></small></a></li>
             </ul>
@@ -133,9 +133,9 @@
             <ul class="rounded">
                 <li class="arrow" id="M2-1"><a href="#match">Bingham 1  <small class="M2-1D"></small></a></li>
                 <li class="arrow" id="M2-2"><a href="#match">Byron 1  <small class="M2-2D"></small></a></li>
-                <li class="arrow" id="M2-3"><a href="#match">Forest 1  <small class="M2-3D"></small></a></li>
+                <li class="arrow" id="M2-3"><a href="#match">Byron 2  <small class="M2-3D"></small></a></li>
                 <li class="arrow" id="M2-4"><a href="#match">Rolls Royce 1  <small class="M2-4D"></small></a></li>
-                <li class="arrow" id="M2-5"><a href="#match">Rolls Royce 2  <small class="M2-5D"></small></a></li>
+                <li class="arrow" id="M2-5"><a href="#match">University 1  <small class="M2-5D"></small></a></li>
                 <li class="arrow" id="M2-6"><a href="#match">West Bridgford &amp; LE 1  <small class="M2-6D"></small></a></li>
                 <li class="arrow" id="M2-7"><a href="#match">West Bridgford &amp; LE 2  <small class="M2-7D"></small></a></li>
             </ul>
@@ -147,12 +147,12 @@
                 <a href="#" class="back">Teams</a>
             </div>
             <ul class="rounded">
-                <li class="arrow" id="M3-1"><a href="#match">Byron 2  <small class="M3-1D"></small></a></li>
-                <li class="arrow" id="M3-2"><a href="#match">East Leake 1  <small class="M3-2D"></small></a></li>
-                <li class="arrow" id="M3-3"><a href="#match">Forest 2  <small class="M3-3D"></small></a></li>
+                <li class="arrow" id="M3-1"><a href="#match">Beeston Fields 1  <small class="M3-1D"></small></a></li>
+                <li class="arrow" id="M3-2"><a href="#match">Carlton 1  <small class="M3-2D"></small></a></li>
+                <li class="arrow" id="M3-3"><a href="#match">Forest 1  <small class="M3-3D"></small></a></li>
                 <li class="arrow" id="M3-4"><a href="#match">Mapperley Park 1  <small class="M3-4D"></small></a></li>
                 <li class="arrow" id="M3-5"><a href="#match">Mapperley Park 2  <small class="M3-5D"></small></a></li>
-                <li class="arrow" id="M3-6"><a href="#match">University 1  <small class="M3-6D"></small></a></li>
+                <li class="arrow" id="M3-6"><a href="#match">Rolls Royce 2  <small class="M3-6D"></small></a></li>
                 <li class="arrow" id="M3-7"><a href="#match">University 2  <small class="M3-7D"></small></a></li>
             </ul>
         </div>
@@ -163,12 +163,12 @@
                 <a href="#" class="back">Teams</a>
             </div>
             <ul class="rounded">
-                <li class="arrow" id="M4-1"><a href="#match">Beeston Fields 1  <small class="M4-1D"></small></a></li>
-                <li class="arrow" id="M4-2"><a href="#match">Carlton 2  <small class="M4-2D"></small></a></li>
-                <li class="arrow" id="M4-3"><a href="#match">Mapperley Park 3  <small class="M4-3D"></small></a></li>
-                <li class="arrow" id="M4-4"><a href="#match">Naseeb 1  <small class="M4-4D"></small></a></li>
-                <li class="arrow" id="M4-5"><a href="#match">Nottingham Vets 1  <small class="M4-5D"></small></a></li>
-                <li class="arrow" id="M4-6"><a href="#match">Southwell Centre 1  <small class="M4-6D"></small></a></li>
+                <li class="arrow" id="M4-1"><a href="#match">Forest 2  <small class="M4-1D"></small></a></li>
+                <li class="arrow" id="M4-2"><a href="#match">Mapperley Park 3  <small class="M4-2D"></small></a></li>
+                <li class="arrow" id="M4-3"><a href="#match">Naseeb 1  <small class="M4-3D"></small></a></li>
+                <li class="arrow" id="M4-4"><a href="#match">Nottingham Vets 1  <small class="M4-4D"></small></a></li>
+                <li class="arrow" id="M4-5"><a href="#match">Rolls Royce 3  <small class="M4-5D"></small></a></li>
+                <li class="arrow" id="M4-6"><a href="#match">University 4  <small class="M4-6D"></small></a></li>
             </ul>
         </div>
 
@@ -178,13 +178,13 @@
                 <a href="#" class="back">Teams</a>
             </div>
             <ul class="rounded">
-                <li class="arrow" id="X1-1"><a href="#match">Beeston Fields 1  <small class="X1-1D"></small></a></li>
-                <li class="arrow" id="X1-2"><a href="#match">Bingham 2  <small class="X1-2D"></small></a></li>
-                <li class="arrow" id="X1-3"><a href="#match">Byron 1  <small class="X1-3D"></small></a></li>
-                <li class="arrow" id="X1-4"><a href="#match">Byron 2  <small class="X1-4D"></small></a></li>
-                <li class="arrow" id="X1-5"><a href="#match">Forest 1  <small class="X1-5D"></small></a></li>
-                <li class="arrow" id="X1-6"><a href="#match">University 1  <small class="X1-6D"></small></a></li>
-                <li class="arrow" id="X1-7"><a href="#match">West Bridgford &amp; LE 1  <small class="X1-7D"></small></a></li>
+                <li class="arrow" id="X1-1"><a href="#match">Bingham 2  <small class="X1-1D"></small></a></li>
+                <li class="arrow" id="X1-2"><a href="#match">Byron 1  <small class="X1-2D"></small></a></li>
+                <li class="arrow" id="X1-3"><a href="#match">Byron 2  <small class="X1-3D"></small></a></li>
+                <li class="arrow" id="X1-4"><a href="#match">Mapperley Park 1  <small class="X1-4D"></small></a></li>
+                <li class="arrow" id="X1-5"><a href="#match">University 1  <small class="X1-5D"></small></a></li>
+                <li class="arrow" id="X1-6"><a href="#match">West Bridgford &amp; LE 1  <small class="X1-6D"></small></a></li>
+                <li class="arrow" id="X1-7"><a href="#match">West Bridgford &amp; LE 2  <small class="X1-7D"></small></a></li>
             </ul>
         </div>
 
@@ -194,13 +194,13 @@
                 <a href="#" class="back">Teams</a>
             </div>
             <ul class="rounded">
-                <li class="arrow" id="X2-1"><a href="#match">Beeston Fields 1  <small class="X2-1D"></small></a></li>
-                <li class="arrow" id="X2-2"><a href="#match">Bingham 1  <small class="X2-2D"></small></a></li>
-                <li class="arrow" id="X2-3"><a href="#match">Byron 1  <small class="X2-3D"></small></a></li>
-                <li class="arrow" id="X2-4"><a href="#match">Byron 2  <small class="X2-4D"></small></a></li>
-                <li class="arrow" id="X2-5"><a href="#match">Forest 1  <small class="X2-5D"></small></a></li>
-                <li class="arrow" id="X2-6"><a href="#match">University 1  <small class="X2-6D"></small></a></li>
-                <li class="arrow" id="X2-7"><a href="#match">West Bridgford &amp; LE 1  <small class="X2-7D"></small></a></li>
+                <li class="arrow" id="X2-1"><a href="#match">Bingham 1  <small class="X2-1D"></small></a></li>
+                <li class="arrow" id="X2-2"><a href="#match">Byron 1  <small class="X2-2D"></small></a></li>
+                <li class="arrow" id="X2-3"><a href="#match">Byron 2  <small class="X2-3D"></small></a></li>
+                <li class="arrow" id="X2-4"><a href="#match">Mapperley Park 1  <small class="X2-4D"></small></a></li>
+                <li class="arrow" id="X2-5"><a href="#match">University 1  <small class="X2-5D"></small></a></li>
+                <li class="arrow" id="X2-6"><a href="#match">West Bridgford &amp; LE 1  <small class="X2-6D"></small></a></li>
+                <li class="arrow" id="X2-7"><a href="#match">West Bridgford &amp; LE 2  <small class="X2-7D"></small></a></li>
             </ul>
         </div>
 
@@ -210,13 +210,13 @@
                 <a href="#" class="back">Teams</a>
             </div>
             <ul class="rounded">
-                <li class="arrow" id="X3-1"><a href="#match">East Leake 1  <small class="X3-1D"></small></a></li>
-                <li class="arrow" id="X3-2"><a href="#match">Forest 2  <small class="X3-2D"></small></a></li>
-                <li class="arrow" id="X3-3"><a href="#match">Mansfield Oaktree  <small class="X3-3D"></small></a></li>
-                <li class="arrow" id="X3-4"><a href="#match">Mapperley Park 1  <small class="X3-4D"></small></a></li>
-                <li class="arrow" id="X3-5"><a href="#match">Phoenixwood 1  <small class="X3-5D"></small></a></li>
-                <li class="arrow" id="X3-6"><a href="#match">University 2  <small class="X3-6D"></small></a></li>
-                <li class="arrow" id="X3-7"><a href="#match">West Bridgford &amp; LE 2  <small class="X3-7D"></small></a></li>
+                <li class="arrow" id="X3-1"><a href="#match">Beeston Fields 1  <small class="X3-1D"></small></a></li>
+                <li class="arrow" id="X3-2"><a href="#match">Forest 1  <small class="X3-2D"></small></a></li>
+                <li class="arrow" id="X3-3"><a href="#match">Forest 2  <small class="X3-3D"></small></a></li>
+                <li class="arrow" id="X3-4"><a href="#match">Mansfield Oaktree  <small class="X3-4D"></small></a></li>
+                <li class="arrow" id="X3-5"><a href="#match">Mapperley Park 2  <small class="X3-5D"></small></a></li>
+                <li class="arrow" id="X3-6"><a href="#match">Phoenixwood 1  <small class="X3-6D"></small></a></li>
+                <li class="arrow" id="X3-7"><a href="#match">University 2  <small class="X3-7D"></small></a></li>
             </ul>
         </div>
 
@@ -228,10 +228,10 @@
             <ul class="rounded">
                 <li class="arrow" id="X4-1"><a href="#match">Beeston Fields 2  <small class="X4-1D"></small></a></li>
                 <li class="arrow" id="X4-2"><a href="#match">Carlton 1  <small class="X4-2D"></small></a></li>
-                <li class="arrow" id="X4-3"><a href="#match">Crusader 1  <small class="X4-3D"></small></a></li>
-                <li class="arrow" id="X4-4"><a href="#match">East Leake 2  <small class="X4-4D"></small></a></li>
-                <li class="arrow" id="X4-5"><a href="#match">Mapperley Park 2  <small class="X4-5D"></small></a></li>
-                <li class="arrow" id="X4-6"><a href="#match">Nottingham Vets 1  <small class="X4-6D"></small></a></li>
+                <li class="arrow" id="X4-3"><a href="#match">East Leake 1  <small class="X4-3D"></small></a></li>
+                <li class="arrow" id="X4-4"><a href="#match">Nottingham Vets 1  <small class="X4-4D"></small></a></li>
+                <li class="arrow" id="X4-5"><a href="#match">St Giles 1  <small class="X4-5D"></small></a></li>
+                <li class="arrow" id="X4-6"><a href="#match">University 3  <small class="X4-6D"></small></a></li>
             </ul>
         </div>
 
@@ -241,11 +241,11 @@
                 <a href="#" class="back">Teams</a>
             </div>
             <ul class="rounded">
-                <li class="arrow" id="X5-1"><a href="#match">Forest 3  <small class="X5-1D"></small></a></li>
-                <li class="arrow" id="X5-2"><a href="#match">Mapperley Park 3  <small class="X5-2D"></small></a></li>
-                <li class="arrow" id="X5-3"><a href="#match">Nottingham Vets 2  <small class="X5-3D"></small></a></li>
+                <li class="arrow" id="X5-1"><a href="#match">Byron 3  <small class="X5-1D"></small></a></li>
+                <li class="arrow" id="X5-2"><a href="#match">Forest 3  <small class="X5-2D"></small></a></li>
+                <li class="arrow" id="X5-3"><a href="#match">Mapperley Park 3  <small class="X5-3D"></small></a></li>
                 <li class="arrow" id="X5-4"><a href="#match">Phoenixwood 2  <small class="X5-4D"></small></a></li>
-                <li class="arrow" id="X5-5"><a href="#match">Rushcliffe Arena 1  <small class="X5-5D"></small></a></li>
+                <li class="arrow" id="X5-5"><a href="#match">Rolls Royce  <small class="X5-5D"></small></a></li>
                 <li class="arrow" id="X5-6"><a href="#match">West Bridgford &amp; LE 3  <small class="X5-6D"></small></a></li>
             </ul>
         </div>
@@ -257,10 +257,10 @@
             </div>
             <ul class="rounded">
                 <li class="arrow" id="L1-1"><a href="#match">Beeston Fields 1  <small class="L1-1D"></small></a></li>
-                <li class="arrow" id="L1-2"><a href="#match">Bingham 2  <small class="L1-2D"></small></a></li>
-                <li class="arrow" id="L1-3"><a href="#match">Byron 1  <small class="L1-3D"></small></a></li>
+                <li class="arrow" id="L1-2"><a href="#match">Byron 1  <small class="L1-2D"></small></a></li>
+                <li class="arrow" id="L1-3"><a href="#match">East Leake  <small class="L1-3D"></small></a></li>
                 <li class="arrow" id="L1-4"><a href="#match">Forest 1  <small class="L1-4D"></small></a></li>
-                <li class="arrow" id="L1-5"><a href="#match">Nottingham Vets 1  <small class="L1-5D"></small></a></li>
+                <li class="arrow" id="L1-5"><a href="#match">Phoenixwood 1  <small class="L1-5D"></small></a></li>
                 <li class="arrow" id="L1-6"><a href="#match">West Bridgford &amp; LE  <small class="L1-6D"></small></a></li>
             </ul>
         </div>
@@ -271,12 +271,12 @@
                 <a href="#" class="back">Teams</a>
             </div>
             <ul class="rounded">
-                <li class="arrow" id="L2-1"><a href="#match">Beeston Fields 1  <small class="L2-1D"></small></a></li>
-                <li class="arrow" id="L2-2"><a href="#match">Bingham 1  <small class="L2-2D"></small></a></li>
-                <li class="arrow" id="L2-3"><a href="#match">Byron 1  <small class="L2-3D"></small></a></li>
-                <li class="arrow" id="L2-4"><a href="#match">Forest 1  <small class="L2-4D"></small></a></li>
-                <li class="arrow" id="L2-5"><a href="#match">Nottingham Vets 1  <small class="L2-5D"></small></a></li>
-                <li class="arrow" id="L2-6"><a href="#match">West Bridgford &amp; LE  <small class="L2-6D"></small></a></li>
+                <li class="arrow" id="L2-1"><a href="#match">Bingham 3  <small class="L2-1D"></small></a></li>
+                <li class="arrow" id="L2-2"><a href="#match">Mansfield Oaktree  <small class="L2-2D"></small></a></li>
+                <li class="arrow" id="L2-3"><a href="#match">Mapperley Park 1  <small class="L2-3D"></small></a></li>
+                <li class="arrow" id="L2-4"><a href="#match">Nottingham Vets 1  <small class="L2-4D"></small></a></li>
+                <li class="arrow" id="L2-5"><a href="#match">Rolls Royce  <small class="L2-5D"></small></a></li>
+                <li class="arrow" id="L2-6"><a href="#match">University 1  <small class="L2-6D"></small></a></li>
             </ul>
         </div>
 
@@ -286,12 +286,12 @@
                 <a href="#" class="back">Teams</a>
             </div>
             <ul class="rounded">
-                <li class="arrow" id="L3-1"><a href="#match">East Leake  <small class="L3-1D"></small></a></li>
+                <li class="arrow" id="L3-1"><a href="#match">Bingham 2  <small class="L3-1D"></small></a></li>
                 <li class="arrow" id="L3-2"><a href="#match">Mansfield Oaktree  <small class="L3-2D"></small></a></li>
                 <li class="arrow" id="L3-3"><a href="#match">Mapperley Park 1  <small class="L3-3D"></small></a></li>
-                <li class="arrow" id="L3-4"><a href="#match">Mapperley Park 2  <small class="L3-4D"></small></a></li>
-                <li class="arrow" id="L3-5"><a href="#match">Nottingham Vets 2  <small class="L3-5D"></small></a></li>
-                <li class="arrow" id="L3-6"><a href="#match">Phoenixwood 1  <small class="L3-6D"></small></a></li>
+                <li class="arrow" id="L3-4"><a href="#match">Nottingham Vets 1  <small class="L3-4D"></small></a></li>
+                <li class="arrow" id="L3-5"><a href="#match">Rolls Royce  <small class="L3-5D"></small></a></li>
+                <li class="arrow" id="L3-6"><a href="#match">University 1  <small class="L3-6D"></small></a></li>
             </ul>
         </div>
 
@@ -393,7 +393,7 @@
             		<td></td>
             		<td id="rubbertit">Rubbers</td>
             		<td id="gametit">Games</td>
-            		<td id="acetit">Aces</td>
+            		<td id="acetit">ACES</td>
             	</tr>
             	<tr>
             		<td id="homeClub"></td>
