--- a/live/club_webapps/radcliffe_knights.html
+++ b/live/club_webapps/radcliffe_knights.html
@@ -59,7 +59,7 @@
                 <a class="button slideup" id="infoButton" href="#about">About</a>
             </div>
 
-            <h1>Radcliffe Knights</h1>
+            <h1 id="ourClubName">Radcliffe Knights</h1>
 	    <div id="loader">
 	    	<div class="loader">
 			<img src="lib/loader.gif" alt="Loading cache..." width="31" height="31" />
@@ -94,7 +94,7 @@
             </div>
             <ul class="rounded">
 
-                <li class="arrow"><a href="#M">Mens  <small> Division 5A</small></a></li>
+                <li class="arrow"><a href="#M">Mens  <small> Division 4B</small></a></li>
             </ul>
         </div>
 
@@ -104,11 +104,12 @@
                 <a href="#" class="back">Teams</a>
             </div>
             <ul class="rounded">
-                <li class="arrow" id="M-1"><a href="#match">Arboretum 2  <small class="M-1D"></small></a></li>
-                <li class="arrow" id="M-2"><a href="#match">Carlton 4  <small class="M-2D"></small></a></li>
-                <li class="arrow" id="M-3"><a href="#match">David Lloyd Aspley 3  <small class="M-3D"></small></a></li>
-                <li class="arrow" id="M-4"><a href="#match">Kimberley 2  <small class="M-4D"></small></a></li>
-                <li class="arrow" id="M-5"><a href="#match">Rushcliffe Arena 1  <small class="M-5D"></small></a></li>
+                <li class="arrow" id="M-1"><a href="#match">Byron 4  <small class="M-1D"></small></a></li>
+                <li class="arrow" id="M-2"><a href="#match">East Leake 4  <small class="M-2D"></small></a></li>
+                <li class="arrow" id="M-3"><a href="#match">Forest 3  <small class="M-3D"></small></a></li>
+                <li class="arrow" id="M-4"><a href="#match">Phoenixwood 2  <small class="M-4D"></small></a></li>
+                <li class="arrow" id="M-5"><a href="#match">Redhill 1  <small class="M-5D"></small></a></li>
+                <li class="arrow" id="M-6"><a href="#match">Southwell Centre 2  <small class="M-6D"></small></a></li>
             </ul>
         </div>
 
@@ -210,7 +211,7 @@
             		<td></td>
             		<td id="rubbertit">Rubbers</td>
             		<td id="gametit">Games</td>
-            		<td id="acetit">Aces</td>
+            		<td id="acetit">ACES</td>
             	</tr>
             	<tr>
             		<td id="homeClub"></td>
