--- a/live/club_webapps/unity.html
+++ b/live/club_webapps/unity.html
@@ -59,7 +59,7 @@
                 <a class="button slideup" id="infoButton" href="#about">About</a>
             </div>
 
-            <h1>Unity</h1>
+            <h1 id="ourClubName">Unity</h1>
 	    <div id="loader">
 	    	<div class="loader">
 			<img src="lib/loader.gif" alt="Loading cache..." width="31" height="31" />
@@ -94,23 +94,40 @@
             </div>
             <ul class="rounded">
 
-                <li class="arrow"><a href="#M">Mens  <small> Division 5B</small></a></li>
-                <li class="arrow"><a href="#X">Mixed  <small> Division 5B</small></a></li>
+                <li class="arrow"><a href="#M1">Mens 1 <small> Division 4A</small></a></li>
+                <li class="arrow"><a href="#M2">Mens 2 <small> Division 5A</small></a></li>
+                <li class="arrow"><a href="#X">Mixed  <small> Division 5A</small></a></li>
             </ul>
         </div>
 
-        <div id="M" class="fixtures">
+        <div id="M1" class="fixtures">
             <div class="toolbar">
-                <h1>Mens </h1>
+                <h1>Mens 1</h1>
                 <a href="#" class="back">Teams</a>
             </div>
             <ul class="rounded">
-                <li class="arrow" id="M-1"><a href="#match">Beeston Valley 3  <small class="M-1D"></small></a></li>
-                <li class="arrow" id="M-2"><a href="#match">East Leake 4  <small class="M-2D"></small></a></li>
-                <li class="arrow" id="M-3"><a href="#match">Forest 3  <small class="M-3D"></small></a></li>
-                <li class="arrow" id="M-4"><a href="#match">Redhill 2  <small class="M-4D"></small></a></li>
-                <li class="arrow" id="M-5"><a href="#match">St Giles 3  <small class="M-5D"></small></a></li>
-                <li class="arrow" id="M-6"><a href="#match">Woodborough 2  <small class="M-6D"></small></a></li>
+                <li class="arrow" id="M1-1"><a href="#match">Beeston Valley 2  <small class="M1-1D"></small></a></li>
+                <li class="arrow" id="M1-2"><a href="#match">Carlton 3  <small class="M1-2D"></small></a></li>
+                <li class="arrow" id="M1-3"><a href="#match">East Leake 3  <small class="M1-3D"></small></a></li>
+                <li class="arrow" id="M1-4"><a href="#match">Nottingham Vets 2  <small class="M1-4D"></small></a></li>
+                <li class="arrow" id="M1-5"><a href="#match">Rushcliffe Arena 1  <small class="M1-5D"></small></a></li>
+                <li class="arrow" id="M1-6"><a href="#match">St Giles 2  <small class="M1-6D"></small></a></li>
+            </ul>
+        </div>
+
+        <div id="M2" class="fixtures">
+            <div class="toolbar">
+                <h1>Mens 2</h1>
+                <a href="#" class="back">Teams</a>
+            </div>
+            <ul class="rounded">
+                <li class="arrow" id="M2-1"><a href="#match">Arboretum 2  <small class="M2-1D"></small></a></li>
+                <li class="arrow" id="M2-2"><a href="#match">David Lloyd Aspley 2  <small class="M2-2D"></small></a></li>
+                <li class="arrow" id="M2-3"><a href="#match">Experian  <small class="M2-3D"></small></a></li>
+                <li class="arrow" id="M2-4"><a href="#match">Kimberley 2  <small class="M2-4D"></small></a></li>
+                <li class="arrow" id="M2-5"><a href="#match">Phoenixwood 3  <small class="M2-5D"></small></a></li>
+                <li class="arrow" id="M2-6"><a href="#match">Southwell Centre 3  <small class="M2-6D"></small></a></li>
+                <li class="arrow" id="M2-7"><a href="#match">Trent Uni Students 1  <small class="M2-7D"></small></a></li>
             </ul>
         </div>
 
@@ -120,12 +137,12 @@
                 <a href="#" class="back">Teams</a>
             </div>
             <ul class="rounded">
-                <li class="arrow" id="X-1"><a href="#match">Beeston Valley 3  <small class="X-1D"></small></a></li>
-                <li class="arrow" id="X-2"><a href="#match">Carlton 3  <small class="X-2D"></small></a></li>
-                <li class="arrow" id="X-3"><a href="#match">Phoenixwood 5  <small class="X-3D"></small></a></li>
-                <li class="arrow" id="X-4"><a href="#match">Rushcliffe Arena 2  <small class="X-4D"></small></a></li>
-                <li class="arrow" id="X-5"><a href="#match">St Giles 3  <small class="X-5D"></small></a></li>
-                <li class="arrow" id="X-6"><a href="#match">University 4  <small class="X-6D"></small></a></li>
+                <li class="arrow" id="X-1"><a href="#match">Arboretum 2  <small class="X-1D"></small></a></li>
+                <li class="arrow" id="X-2"><a href="#match">Boots 3  <small class="X-2D"></small></a></li>
+                <li class="arrow" id="X-3"><a href="#match">Byron 5  <small class="X-3D"></small></a></li>
+                <li class="arrow" id="X-4"><a href="#match">Kimberley 3  <small class="X-4D"></small></a></li>
+                <li class="arrow" id="X-5"><a href="#match">Nottingham Vets 3  <small class="X-5D"></small></a></li>
+                <li class="arrow" id="X-6"><a href="#match">St Giles 4  <small class="X-6D"></small></a></li>
             </ul>
         </div>
 
@@ -227,7 +244,7 @@
             		<td></td>
             		<td id="rubbertit">Rubbers</td>
             		<td id="gametit">Games</td>
-            		<td id="acetit">Aces</td>
+            		<td id="acetit">ACES</td>
             	</tr>
             	<tr>
             		<td id="homeClub"></td>
