--- a/live/club_webapps/university_staff.html
+++ b/live/club_webapps/university_staff.html
@@ -59,7 +59,7 @@
                 <a class="button slideup" id="infoButton" href="#about">About</a>
             </div>
 
-            <h1>University Staff</h1>
+            <h1 id="ourClubName">University Staff</h1>
 	    <div id="loader">
 	    	<div class="loader">
 			<img src="lib/loader.gif" alt="Loading cache..." width="31" height="31" />
@@ -105,12 +105,12 @@
                 <a href="#" class="back">Teams</a>
             </div>
             <ul class="rounded">
-                <li class="arrow" id="M-1"><a href="#match">Boots 1  <small class="M-1D"></small></a></li>
-                <li class="arrow" id="M-2"><a href="#match">Byron 3  <small class="M-2D"></small></a></li>
-                <li class="arrow" id="M-3"><a href="#match">Carlton 1  <small class="M-3D"></small></a></li>
-                <li class="arrow" id="M-4"><a href="#match">Crusader  <small class="M-4D"></small></a></li>
-                <li class="arrow" id="M-5"><a href="#match">Mansfield Oaktree  <small class="M-5D"></small></a></li>
-                <li class="arrow" id="M-6"><a href="#match">Phoenixwood 1  <small class="M-6D"></small></a></li>
+                <li class="arrow" id="M-1"><a href="#match">Crusader  <small class="M-1D"></small></a></li>
+                <li class="arrow" id="M-2"><a href="#match">East Leake 1  <small class="M-2D"></small></a></li>
+                <li class="arrow" id="M-3"><a href="#match">Mansfield Oaktree  <small class="M-3D"></small></a></li>
+                <li class="arrow" id="M-4"><a href="#match">Phoenixwood 1  <small class="M-4D"></small></a></li>
+                <li class="arrow" id="M-5"><a href="#match">St Giles 1  <small class="M-5D"></small></a></li>
+                <li class="arrow" id="M-6"><a href="#match">University 3  <small class="M-6D"></small></a></li>
             </ul>
         </div>
 
@@ -120,12 +120,12 @@
                 <a href="#" class="back">Teams</a>
             </div>
             <ul class="rounded">
-                <li class="arrow" id="X-1"><a href="#match">Arboretum 1  <small class="X-1D"></small></a></li>
-                <li class="arrow" id="X-2"><a href="#match">Beeston Fields 4  <small class="X-2D"></small></a></li>
-                <li class="arrow" id="X-3"><a href="#match">Boots 3  <small class="X-3D"></small></a></li>
-                <li class="arrow" id="X-4"><a href="#match">Nottingham Vets 3  <small class="X-4D"></small></a></li>
-                <li class="arrow" id="X-5"><a href="#match">Phoenixwood 3  <small class="X-5D"></small></a></li>
-                <li class="arrow" id="X-6"><a href="#match">Southwell Centre 2  <small class="X-6D"></small></a></li>
+                <li class="arrow" id="X-1"><a href="#match">Beeston Fields 4  <small class="X-1D"></small></a></li>
+                <li class="arrow" id="X-2"><a href="#match">Byron 4  <small class="X-2D"></small></a></li>
+                <li class="arrow" id="X-3"><a href="#match">Carlton 3  <small class="X-3D"></small></a></li>
+                <li class="arrow" id="X-4"><a href="#match">Mapperley Park 4  <small class="X-4D"></small></a></li>
+                <li class="arrow" id="X-5"><a href="#match">Southwell Centre 2  <small class="X-5D"></small></a></li>
+                <li class="arrow" id="X-6"><a href="#match">University 4  <small class="X-6D"></small></a></li>
             </ul>
         </div>
 
@@ -227,7 +227,7 @@
             		<td></td>
             		<td id="rubbertit">Rubbers</td>
             		<td id="gametit">Games</td>
-            		<td id="acetit">Aces</td>
+            		<td id="acetit">ACES</td>
             	</tr>
             	<tr>
             		<td id="homeClub"></td>
