--- a/live/club_webapps/woodborough.html
+++ b/live/club_webapps/woodborough.html
@@ -55,10 +55,11 @@
 
         <div id="home" class="current">
             <div class="toolbar">
-                <h1>Woodborough</h1>
+                <h1>Scorecard</h1>
                 <a class="button slideup" id="infoButton" href="#about">About</a>
             </div>
 
+            <h1>Woodborough</h1>
 	    <div id="loader">
 	    	<div class="loader">
 			<img src="lib/loader.gif" alt="Loading cache..." width="31" height="31" />
@@ -66,11 +67,10 @@
 		</div>
 	    </div>
 	    
-	    <h2>Scorecards (offline)</h2>
             <ul class="rounded">
                 <li class="arrow"><a href="#teams">Teams</a></li>
 	    </ul>
-            <h2>NottsBA (online)</h2>
+            <h2>NottsBA</h2>
             <ul class="rounded online-required">
                 <li class="forward"><a href="http://www.nottsba.co.uk/mobile/club_tables.php?cnm=woodborough" target="_webapp">League Results</a></li>
                 <li class="forward"><a href="http://www.nottsba.co.uk/mobile/venues.php" target="_webapp">Venues</a></li>
@@ -94,38 +94,23 @@
             </div>
             <ul class="rounded">
 
-                <li class="arrow"><a href="#M1">Mens 1 <small> Division 4A</small></a></li>
-                <li class="arrow"><a href="#M2">Mens 2 <small> Division 5B</small></a></li>
+                <li class="arrow"><a href="#M">Mens  <small> Division 5B</small></a></li>
             </ul>
         </div>
 
-        <div id="M1" class="fixtures">
+        <div id="M" class="fixtures">
             <div class="toolbar">
-                <h1>Mens 1</h1>
+                <h1>Mens </h1>
                 <a href="#" class="back">Teams</a>
             </div>
             <ul class="rounded">
-                <li class="arrow" id="M1-1"><a href="#match">Beeston Valley 2  <small class="M1-1D"></small></a></li>
-                <li class="arrow" id="M1-2"><a href="#match">David Lloyd Aspley 1  <small class="M1-2D"></small></a></li>
-                <li class="arrow" id="M1-3"><a href="#match">East Leake 3  <small class="M1-3D"></small></a></li>
-                <li class="arrow" id="M1-4"><a href="#match">Nottingham Vets 2  <small class="M1-4D"></small></a></li>
-                <li class="arrow" id="M1-5"><a href="#match">St Giles 2  <small class="M1-5D"></small></a></li>
-                <li class="arrow" id="M1-6"><a href="#match">West Bridgford &amp; LE 3  <small class="M1-6D"></small></a></li>
-            </ul>
-        </div>
-
-        <div id="M2" class="fixtures">
-            <div class="toolbar">
-                <h1>Mens 2</h1>
-                <a href="#" class="back">Teams</a>
-            </div>
-            <ul class="rounded">
-                <li class="arrow" id="M2-1"><a href="#match">Beeston Valley 3  <small class="M2-1D"></small></a></li>
-                <li class="arrow" id="M2-2"><a href="#match">East Leake 4  <small class="M2-2D"></small></a></li>
-                <li class="arrow" id="M2-3"><a href="#match">Forest 3  <small class="M2-3D"></small></a></li>
-                <li class="arrow" id="M2-4"><a href="#match">Redhill 2  <small class="M2-4D"></small></a></li>
-                <li class="arrow" id="M2-5"><a href="#match">St Giles 3  <small class="M2-5D"></small></a></li>
-                <li class="arrow" id="M2-6"><a href="#match">Unity  <small class="M2-6D"></small></a></li>
+                <li class="arrow" id="M-1"><a href="#match">Arboretum 3  <small class="M-1D"></small></a></li>
+                <li class="arrow" id="M-2"><a href="#match">Beeston Valley 3  <small class="M-2D"></small></a></li>
+                <li class="arrow" id="M-3"><a href="#match">David Lloyd Aspley 3  <small class="M-3D"></small></a></li>
+                <li class="arrow" id="M-4"><a href="#match">Redhill 2  <small class="M-4D"></small></a></li>
+                <li class="arrow" id="M-5"><a href="#match">Rushcliffe Arena 2  <small class="M-5D"></small></a></li>
+                <li class="arrow" id="M-6"><a href="#match">St Giles 3  <small class="M-6D"></small></a></li>
+                <li class="arrow" id="M-7"><a href="#match">Trent Uni Students 2  <small class="M-7D"></small></a></li>
             </ul>
         </div>
 
@@ -227,7 +212,7 @@
             		<td></td>
             		<td id="rubbertit">Rubbers</td>
             		<td id="gametit">Games</td>
-            		<td id="acetit">Aces</td>
+            		<td id="acetit">ACES</td>
             	</tr>
             	<tr>
             		<td id="homeClub"></td>
