--- a/live/club_webapps/arboretum.html
+++ b/live/club_webapps/arboretum.html
@@ -59,7 +59,7 @@
                 <a class="button slideup" id="infoButton" href="#about">About</a>
             </div>
 
-            <h1>Arboretum</h1>
+            <h1 id="ourClubName">Arboretum</h1>
 	    <div id="loader">
 	    	<div class="loader">
 			<img src="lib/loader.gif" alt="Loading cache..." width="31" height="31" />
@@ -94,10 +94,10 @@
             </div>
             <ul class="rounded">
 
-                <li class="arrow"><a href="#M1">Mens 1 <small> Division 4B</small></a></li>
+                <li class="arrow"><a href="#M1">Mens 1 <small> Division 3B</small></a></li>
                 <li class="arrow"><a href="#M2">Mens 2 <small> Division 5A</small></a></li>
-                <li class="arrow"><a href="#M3">Mens 3 <small> Division 6A</small></a></li>
-                <li class="arrow"><a href="#X1">Mixed 1 <small> Division 4B</small></a></li>
+                <li class="arrow"><a href="#M3">Mens 3 <small> Division 5B</small></a></li>
+                <li class="arrow"><a href="#X1">Mixed 1 <small> Division 3B</small></a></li>
                 <li class="arrow"><a href="#X2">Mixed 2 <small> Division 5A</small></a></li>
                 <li class="arrow"><a href="#L">Ladies  <small> Division 3</small></a></li>
             </ul>
@@ -109,12 +109,12 @@
                 <a href="#" class="back">Teams</a>
             </div>
             <ul class="rounded">
-                <li class="arrow" id="M1-1"><a href="#match">Byron 4  <small class="M1-1D"></small></a></li>
-                <li class="arrow" id="M1-2"><a href="#match">David Lloyd Aspley 2  <small class="M1-2D"></small></a></li>
-                <li class="arrow" id="M1-3"><a href="#match">Mapperley Park 4  <small class="M1-3D"></small></a></li>
-                <li class="arrow" id="M1-4"><a href="#match">Naseeb 3  <small class="M1-4D"></small></a></li>
-                <li class="arrow" id="M1-5"><a href="#match">Phoenixwood 3  <small class="M1-5D"></small></a></li>
-                <li class="arrow" id="M1-6"><a href="#match">Southwell Centre 2  <small class="M1-6D"></small></a></li>
+                <li class="arrow" id="M1-1"><a href="#match">Boots 2  <small class="M1-1D"></small></a></li>
+                <li class="arrow" id="M1-2"><a href="#match">Carlton 2  <small class="M1-2D"></small></a></li>
+                <li class="arrow" id="M1-3"><a href="#match">East Leake 2  <small class="M1-3D"></small></a></li>
+                <li class="arrow" id="M1-4"><a href="#match">Naseeb 2  <small class="M1-4D"></small></a></li>
+                <li class="arrow" id="M1-5"><a href="#match">Southwell Centre 1  <small class="M1-5D"></small></a></li>
+                <li class="arrow" id="M1-6"><a href="#match">West Bridgford &amp; LE 3  <small class="M1-6D"></small></a></li>
             </ul>
         </div>
 
@@ -124,11 +124,13 @@
                 <a href="#" class="back">Teams</a>
             </div>
             <ul class="rounded">
-                <li class="arrow" id="M2-1"><a href="#match">Carlton 4  <small class="M2-1D"></small></a></li>
-                <li class="arrow" id="M2-2"><a href="#match">David Lloyd Aspley 3  <small class="M2-2D"></small></a></li>
+                <li class="arrow" id="M2-1"><a href="#match">David Lloyd Aspley 2  <small class="M2-1D"></small></a></li>
+                <li class="arrow" id="M2-2"><a href="#match">Experian  <small class="M2-2D"></small></a></li>
                 <li class="arrow" id="M2-3"><a href="#match">Kimberley 2  <small class="M2-3D"></small></a></li>
-                <li class="arrow" id="M2-4"><a href="#match">Radcliffe Knights  <small class="M2-4D"></small></a></li>
-                <li class="arrow" id="M2-5"><a href="#match">Rushcliffe Arena 1  <small class="M2-5D"></small></a></li>
+                <li class="arrow" id="M2-4"><a href="#match">Phoenixwood 3  <small class="M2-4D"></small></a></li>
+                <li class="arrow" id="M2-5"><a href="#match">Southwell Centre 3  <small class="M2-5D"></small></a></li>
+                <li class="arrow" id="M2-6"><a href="#match">Trent Uni Students 1  <small class="M2-6D"></small></a></li>
+                <li class="arrow" id="M2-7"><a href="#match">Unity 2  <small class="M2-7D"></small></a></li>
             </ul>
         </div>
 
@@ -138,14 +140,13 @@
                 <a href="#" class="back">Teams</a>
             </div>
             <ul class="rounded">
-                <li class="arrow" id="M3-1"><a href="#match">Experian  <small class="M3-1D"></small></a></li>
-                <li class="arrow" id="M3-2"><a href="#match">Experian  <small class="M3-2D"></small></a></li>
-                <li class="arrow" id="M3-3"><a href="#match">Rushcliffe Arena 2  <small class="M3-3D"></small></a></li>
+                <li class="arrow" id="M3-1"><a href="#match">Beeston Valley 3  <small class="M3-1D"></small></a></li>
+                <li class="arrow" id="M3-2"><a href="#match">David Lloyd Aspley 3  <small class="M3-2D"></small></a></li>
+                <li class="arrow" id="M3-3"><a href="#match">Redhill 2  <small class="M3-3D"></small></a></li>
                 <li class="arrow" id="M3-4"><a href="#match">Rushcliffe Arena 2  <small class="M3-4D"></small></a></li>
-                <li class="arrow" id="M3-5"><a href="#match">Southwell Centre 3  <small class="M3-5D"></small></a></li>
-                <li class="arrow" id="M3-6"><a href="#match">Southwell Centre 3  <small class="M3-6D"></small></a></li>
-                <li class="arrow" id="M3-7"><a href="#match">Trent Uni Students  <small class="M3-7D"></small></a></li>
-                <li class="arrow" id="M3-8"><a href="#match">Trent Uni Students  <small class="M3-8D"></small></a></li>
+                <li class="arrow" id="M3-5"><a href="#match">St Giles 3  <small class="M3-5D"></small></a></li>
+                <li class="arrow" id="M3-6"><a href="#match">Trent Uni Students 2  <small class="M3-6D"></small></a></li>
+                <li class="arrow" id="M3-7"><a href="#match">Woodborough  <small class="M3-7D"></small></a></li>
             </ul>
         </div>
 
@@ -155,12 +156,12 @@
                 <a href="#" class="back">Teams</a>
             </div>
             <ul class="rounded">
-                <li class="arrow" id="X1-1"><a href="#match">Beeston Fields 4  <small class="X1-1D"></small></a></li>
-                <li class="arrow" id="X1-2"><a href="#match">Boots 3  <small class="X1-2D"></small></a></li>
-                <li class="arrow" id="X1-3"><a href="#match">Nottingham Vets 3  <small class="X1-3D"></small></a></li>
-                <li class="arrow" id="X1-4"><a href="#match">Phoenixwood 3  <small class="X1-4D"></small></a></li>
-                <li class="arrow" id="X1-5"><a href="#match">Southwell Centre 2  <small class="X1-5D"></small></a></li>
-                <li class="arrow" id="X1-6"><a href="#match">University Staff  <small class="X1-6D"></small></a></li>
+                <li class="arrow" id="X1-1"><a href="#match">Beeston Valley 1  <small class="X1-1D"></small></a></li>
+                <li class="arrow" id="X1-2"><a href="#match">Boots 2  <small class="X1-2D"></small></a></li>
+                <li class="arrow" id="X1-3"><a href="#match">Crusader 1  <small class="X1-3D"></small></a></li>
+                <li class="arrow" id="X1-4"><a href="#match">East Leake 2  <small class="X1-4D"></small></a></li>
+                <li class="arrow" id="X1-5"><a href="#match">Kimberley 1  <small class="X1-5D"></small></a></li>
+                <li class="arrow" id="X1-6"><a href="#match">Phoenixwood 3  <small class="X1-6D"></small></a></li>
             </ul>
         </div>
 
@@ -170,12 +171,12 @@
                 <a href="#" class="back">Teams</a>
             </div>
             <ul class="rounded">
-                <li class="arrow" id="X2-1"><a href="#match">Byron 5  <small class="X2-1D"></small></a></li>
-                <li class="arrow" id="X2-2"><a href="#match">Carlton 2  <small class="X2-2D"></small></a></li>
-                <li class="arrow" id="X2-3"><a href="#match">Crusader 2  <small class="X2-3D"></small></a></li>
-                <li class="arrow" id="X2-4"><a href="#match">Kimberley 3  <small class="X2-4D"></small></a></li>
-                <li class="arrow" id="X2-5"><a href="#match">Nottingham Vets 4  <small class="X2-5D"></small></a></li>
-                <li class="arrow" id="X2-6"><a href="#match">Redhill 2  <small class="X2-6D"></small></a></li>
+                <li class="arrow" id="X2-1"><a href="#match">Boots 3  <small class="X2-1D"></small></a></li>
+                <li class="arrow" id="X2-2"><a href="#match">Byron 5  <small class="X2-2D"></small></a></li>
+                <li class="arrow" id="X2-3"><a href="#match">Kimberley 3  <small class="X2-3D"></small></a></li>
+                <li class="arrow" id="X2-4"><a href="#match">Nottingham Vets 3  <small class="X2-4D"></small></a></li>
+                <li class="arrow" id="X2-5"><a href="#match">St Giles 4  <small class="X2-5D"></small></a></li>
+                <li class="arrow" id="X2-6"><a href="#match">Unity  <small class="X2-6D"></small></a></li>
             </ul>
         </div>
 
@@ -185,12 +186,12 @@
                 <a href="#" class="back">Teams</a>
             </div>
             <ul class="rounded">
-                <li class="arrow" id="L-1"><a href="#match">Beeston Fields 2  <small class="L-1D"></small></a></li>
+                <li class="arrow" id="L-1"><a href="#match">Beeston Valley 1  <small class="L-1D"></small></a></li>
                 <li class="arrow" id="L-2"><a href="#match">Boots  <small class="L-2D"></small></a></li>
-                <li class="arrow" id="L-3"><a href="#match">Kimberley  <small class="L-3D"></small></a></li>
-                <li class="arrow" id="L-4"><a href="#match">Phoenixwood 2  <small class="L-4D"></small></a></li>
-                <li class="arrow" id="L-5"><a href="#match">Rushcliffe Arena  <small class="L-5D"></small></a></li>
-                <li class="arrow" id="L-6"><a href="#match">Southwell Centre  <small class="L-6D"></small></a></li>
+                <li class="arrow" id="L-3"><a href="#match">Byron 2  <small class="L-3D"></small></a></li>
+                <li class="arrow" id="L-4"><a href="#match">Kimberley  <small class="L-4D"></small></a></li>
+                <li class="arrow" id="L-5"><a href="#match">St Giles 1  <small class="L-5D"></small></a></li>
+                <li class="arrow" id="L-6"><a href="#match">University 2  <small class="L-6D"></small></a></li>
             </ul>
         </div>
 
@@ -292,7 +293,7 @@
             		<td></td>
             		<td id="rubbertit">Rubbers</td>
             		<td id="gametit">Games</td>
-            		<td id="acetit">Aces</td>
+            		<td id="acetit">ACES</td>
             	</tr>
             	<tr>
             		<td id="homeClub"></td>
