--- a/live/club_webapps/beeston_valley.html
+++ b/live/club_webapps/beeston_valley.html
@@ -59,7 +59,7 @@
                 <a class="button slideup" id="infoButton" href="#about">About</a>
             </div>
 
-            <h1>Beeston Valley</h1>
+            <h1 id="ourClubName">Beeston Valley</h1>
 	    <div id="loader">
 	    	<div class="loader">
 			<img src="lib/loader.gif" alt="Loading cache..." width="31" height="31" />
@@ -100,7 +100,7 @@
                 <li class="arrow"><a href="#X1">Mixed 1 <small> Division 3B</small></a></li>
                 <li class="arrow"><a href="#X2">Mixed 2 <small> Division 4A</small></a></li>
                 <li class="arrow"><a href="#X3">Mixed 3 <small> Division 5B</small></a></li>
-                <li class="arrow"><a href="#L1">Ladies 1 <small> Division 2</small></a></li>
+                <li class="arrow"><a href="#L1">Ladies 1 <small> Division 3</small></a></li>
                 <li class="arrow"><a href="#L2">Ladies 2 <small> Division 4</small></a></li>
             </ul>
         </div>
@@ -111,12 +111,12 @@
                 <a href="#" class="back">Teams</a>
             </div>
             <ul class="rounded">
-                <li class="arrow" id="M1-1"><a href="#match">Boots 2  <small class="M1-1D"></small></a></li>
-                <li class="arrow" id="M1-2"><a href="#match">Kimberley 1  <small class="M1-2D"></small></a></li>
-                <li class="arrow" id="M1-3"><a href="#match">Phoenixwood 2  <small class="M1-3D"></small></a></li>
-                <li class="arrow" id="M1-4"><a href="#match">Redhill 1  <small class="M1-4D"></small></a></li>
-                <li class="arrow" id="M1-5"><a href="#match">Rolls Royce 3  <small class="M1-5D"></small></a></li>
-                <li class="arrow" id="M1-6"><a href="#match">University 4  <small class="M1-6D"></small></a></li>
+                <li class="arrow" id="M1-1"><a href="#match">Beeston Fields 2  <small class="M1-1D"></small></a></li>
+                <li class="arrow" id="M1-2"><a href="#match">Boots 1  <small class="M1-2D"></small></a></li>
+                <li class="arrow" id="M1-3"><a href="#match">Byron 3  <small class="M1-3D"></small></a></li>
+                <li class="arrow" id="M1-4"><a href="#match">David Lloyd Aspley 1  <small class="M1-4D"></small></a></li>
+                <li class="arrow" id="M1-5"><a href="#match">Kimberley 1  <small class="M1-5D"></small></a></li>
+                <li class="arrow" id="M1-6"><a href="#match">Naseeb 3  <small class="M1-6D"></small></a></li>
             </ul>
         </div>
 
@@ -126,12 +126,12 @@
                 <a href="#" class="back">Teams</a>
             </div>
             <ul class="rounded">
-                <li class="arrow" id="M2-1"><a href="#match">David Lloyd Aspley 1  <small class="M2-1D"></small></a></li>
+                <li class="arrow" id="M2-1"><a href="#match">Carlton 3  <small class="M2-1D"></small></a></li>
                 <li class="arrow" id="M2-2"><a href="#match">East Leake 3  <small class="M2-2D"></small></a></li>
                 <li class="arrow" id="M2-3"><a href="#match">Nottingham Vets 2  <small class="M2-3D"></small></a></li>
-                <li class="arrow" id="M2-4"><a href="#match">St Giles 2  <small class="M2-4D"></small></a></li>
-                <li class="arrow" id="M2-5"><a href="#match">West Bridgford &amp; LE 3  <small class="M2-5D"></small></a></li>
-                <li class="arrow" id="M2-6"><a href="#match">Woodborough 1  <small class="M2-6D"></small></a></li>
+                <li class="arrow" id="M2-4"><a href="#match">Rushcliffe Arena 1  <small class="M2-4D"></small></a></li>
+                <li class="arrow" id="M2-5"><a href="#match">St Giles 2  <small class="M2-5D"></small></a></li>
+                <li class="arrow" id="M2-6"><a href="#match">Unity 1  <small class="M2-6D"></small></a></li>
             </ul>
         </div>
 
@@ -141,12 +141,13 @@
                 <a href="#" class="back">Teams</a>
             </div>
             <ul class="rounded">
-                <li class="arrow" id="M3-1"><a href="#match">East Leake 4  <small class="M3-1D"></small></a></li>
-                <li class="arrow" id="M3-2"><a href="#match">Forest 3  <small class="M3-2D"></small></a></li>
+                <li class="arrow" id="M3-1"><a href="#match">Arboretum 3  <small class="M3-1D"></small></a></li>
+                <li class="arrow" id="M3-2"><a href="#match">David Lloyd Aspley 3  <small class="M3-2D"></small></a></li>
                 <li class="arrow" id="M3-3"><a href="#match">Redhill 2  <small class="M3-3D"></small></a></li>
-                <li class="arrow" id="M3-4"><a href="#match">St Giles 3  <small class="M3-4D"></small></a></li>
-                <li class="arrow" id="M3-5"><a href="#match">Unity  <small class="M3-5D"></small></a></li>
-                <li class="arrow" id="M3-6"><a href="#match">Woodborough 2  <small class="M3-6D"></small></a></li>
+                <li class="arrow" id="M3-4"><a href="#match">Rushcliffe Arena 2  <small class="M3-4D"></small></a></li>
+                <li class="arrow" id="M3-5"><a href="#match">St Giles 3  <small class="M3-5D"></small></a></li>
+                <li class="arrow" id="M3-6"><a href="#match">Trent Uni Students 2  <small class="M3-6D"></small></a></li>
+                <li class="arrow" id="M3-7"><a href="#match">Woodborough  <small class="M3-7D"></small></a></li>
             </ul>
         </div>
 
@@ -156,12 +157,12 @@
                 <a href="#" class="back">Teams</a>
             </div>
             <ul class="rounded">
-                <li class="arrow" id="X1-1"><a href="#match">Boots 2  <small class="X1-1D"></small></a></li>
-                <li class="arrow" id="X1-2"><a href="#match">Byron 3  <small class="X1-2D"></small></a></li>
-                <li class="arrow" id="X1-3"><a href="#match">Kimberley 1  <small class="X1-3D"></small></a></li>
-                <li class="arrow" id="X1-4"><a href="#match">Mapperley Park 5  <small class="X1-4D"></small></a></li>
-                <li class="arrow" id="X1-5"><a href="#match">Redhill 1  <small class="X1-5D"></small></a></li>
-                <li class="arrow" id="X1-6"><a href="#match">Rolls Royce  <small class="X1-6D"></small></a></li>
+                <li class="arrow" id="X1-1"><a href="#match">Arboretum 1  <small class="X1-1D"></small></a></li>
+                <li class="arrow" id="X1-2"><a href="#match">Boots 2  <small class="X1-2D"></small></a></li>
+                <li class="arrow" id="X1-3"><a href="#match">Crusader 1  <small class="X1-3D"></small></a></li>
+                <li class="arrow" id="X1-4"><a href="#match">East Leake 2  <small class="X1-4D"></small></a></li>
+                <li class="arrow" id="X1-5"><a href="#match">Kimberley 1  <small class="X1-5D"></small></a></li>
+                <li class="arrow" id="X1-6"><a href="#match">Phoenixwood 3  <small class="X1-6D"></small></a></li>
             </ul>
         </div>
 
@@ -171,12 +172,12 @@
                 <a href="#" class="back">Teams</a>
             </div>
             <ul class="rounded">
-                <li class="arrow" id="X2-1"><a href="#match">David Lloyd Aspley 2  <small class="X2-1D"></small></a></li>
-                <li class="arrow" id="X2-2"><a href="#match">East Leake 3  <small class="X2-2D"></small></a></li>
-                <li class="arrow" id="X2-3"><a href="#match">Kimberley 2  <small class="X2-3D"></small></a></li>
-                <li class="arrow" id="X2-4"><a href="#match">Phoenixwood 4  <small class="X2-4D"></small></a></li>
-                <li class="arrow" id="X2-5"><a href="#match">Southwell Centre 1  <small class="X2-5D"></small></a></li>
-                <li class="arrow" id="X2-6"><a href="#match">St Giles 2  <small class="X2-6D"></small></a></li>
+                <li class="arrow" id="X2-1"><a href="#match">Carlton 2  <small class="X2-1D"></small></a></li>
+                <li class="arrow" id="X2-2"><a href="#match">Crusader 2  <small class="X2-2D"></small></a></li>
+                <li class="arrow" id="X2-3"><a href="#match">East Leake 3  <small class="X2-3D"></small></a></li>
+                <li class="arrow" id="X2-4"><a href="#match">Mapperley Park 5  <small class="X2-4D"></small></a></li>
+                <li class="arrow" id="X2-5"><a href="#match">Phoenixwood 4  <small class="X2-5D"></small></a></li>
+                <li class="arrow" id="X2-6"><a href="#match">Redhill 1  <small class="X2-6D"></small></a></li>
             </ul>
         </div>
 
@@ -186,12 +187,13 @@
                 <a href="#" class="back">Teams</a>
             </div>
             <ul class="rounded">
-                <li class="arrow" id="X3-1"><a href="#match">Carlton 3  <small class="X3-1D"></small></a></li>
-                <li class="arrow" id="X3-2"><a href="#match">Phoenixwood 5  <small class="X3-2D"></small></a></li>
-                <li class="arrow" id="X3-3"><a href="#match">Rushcliffe Arena 2  <small class="X3-3D"></small></a></li>
-                <li class="arrow" id="X3-4"><a href="#match">St Giles 3  <small class="X3-4D"></small></a></li>
-                <li class="arrow" id="X3-5"><a href="#match">Unity  <small class="X3-5D"></small></a></li>
-                <li class="arrow" id="X3-6"><a href="#match">University 4  <small class="X3-6D"></small></a></li>
+                <li class="arrow" id="X3-1"><a href="#match">Kimberley 2  <small class="X3-1D"></small></a></li>
+                <li class="arrow" id="X3-2"><a href="#match">Nottingham Vets 4  <small class="X3-2D"></small></a></li>
+                <li class="arrow" id="X3-3"><a href="#match">Phoenixwood 5  <small class="X3-3D"></small></a></li>
+                <li class="arrow" id="X3-4"><a href="#match">Redhill 2  <small class="X3-4D"></small></a></li>
+                <li class="arrow" id="X3-5"><a href="#match">Rushcliffe Arena 2  <small class="X3-5D"></small></a></li>
+                <li class="arrow" id="X3-6"><a href="#match">St Giles 3  <small class="X3-6D"></small></a></li>
+                <li class="arrow" id="X3-7"><a href="#match">Trent Uni Students  <small class="X3-7D"></small></a></li>
             </ul>
         </div>
 
@@ -201,11 +203,12 @@
                 <a href="#" class="back">Teams</a>
             </div>
             <ul class="rounded">
-                <li class="arrow" id="L1-1"><a href="#match">Carlton  <small class="L1-1D"></small></a></li>
-                <li class="arrow" id="L1-2"><a href="#match">Crusader  <small class="L1-2D"></small></a></li>
-                <li class="arrow" id="L1-3"><a href="#match">Forest 2  <small class="L1-3D"></small></a></li>
-                <li class="arrow" id="L1-4"><a href="#match">Rolls Royce  <small class="L1-4D"></small></a></li>
-                <li class="arrow" id="L1-5"><a href="#match">University 1  <small class="L1-5D"></small></a></li>
+                <li class="arrow" id="L1-1"><a href="#match">Arboretum  <small class="L1-1D"></small></a></li>
+                <li class="arrow" id="L1-2"><a href="#match">Boots  <small class="L1-2D"></small></a></li>
+                <li class="arrow" id="L1-3"><a href="#match">Byron 2  <small class="L1-3D"></small></a></li>
+                <li class="arrow" id="L1-4"><a href="#match">Kimberley  <small class="L1-4D"></small></a></li>
+                <li class="arrow" id="L1-5"><a href="#match">St Giles 1  <small class="L1-5D"></small></a></li>
+                <li class="arrow" id="L1-6"><a href="#match">University 2  <small class="L1-6D"></small></a></li>
             </ul>
         </div>
 
@@ -215,11 +218,12 @@
                 <a href="#" class="back">Teams</a>
             </div>
             <ul class="rounded">
-                <li class="arrow" id="L2-1"><a href="#match">Byron 2  <small class="L2-1D"></small></a></li>
-                <li class="arrow" id="L2-2"><a href="#match">St Giles 1  <small class="L2-2D"></small></a></li>
-                <li class="arrow" id="L2-3"><a href="#match">St Giles 2  <small class="L2-3D"></small></a></li>
-                <li class="arrow" id="L2-4"><a href="#match">Trent Uni Students  <small class="L2-4D"></small></a></li>
-                <li class="arrow" id="L2-5"><a href="#match">University 2  <small class="L2-5D"></small></a></li>
+                <li class="arrow" id="L2-1"><a href="#match">Beeston Fields 2  <small class="L2-1D"></small></a></li>
+                <li class="arrow" id="L2-2"><a href="#match">Carlton 2  <small class="L2-2D"></small></a></li>
+                <li class="arrow" id="L2-3"><a href="#match">Redhill  <small class="L2-3D"></small></a></li>
+                <li class="arrow" id="L2-4"><a href="#match">Rushcliffe Arena  <small class="L2-4D"></small></a></li>
+                <li class="arrow" id="L2-5"><a href="#match">St Giles 2  <small class="L2-5D"></small></a></li>
+                <li class="arrow" id="L2-6"><a href="#match">Trent Uni Students  <small class="L2-6D"></small></a></li>
             </ul>
         </div>
 
@@ -321,7 +325,7 @@
             		<td></td>
             		<td id="rubbertit">Rubbers</td>
             		<td id="gametit">Games</td>
-            		<td id="acetit">Aces</td>
+            		<td id="acetit">ACES</td>
             	</tr>
             	<tr>
             		<td id="homeClub"></td>
