--- a/live/club_webapps/boots.html
+++ b/live/club_webapps/boots.html
@@ -59,7 +59,7 @@
                 <a class="button slideup" id="infoButton" href="#about">About</a>
             </div>
 
-            <h1>Boots</h1>
+            <h1 id="ourClubName">Boots</h1>
 	    <div id="loader">
 	    	<div class="loader">
 			<img src="lib/loader.gif" alt="Loading cache..." width="31" height="31" />
@@ -94,11 +94,11 @@
             </div>
             <ul class="rounded">
 
-                <li class="arrow"><a href="#M1">Mens 1 <small> Division 2B</small></a></li>
-                <li class="arrow"><a href="#M2">Mens 2 <small> Division 3A</small></a></li>
+                <li class="arrow"><a href="#M1">Mens 1 <small> Division 3A</small></a></li>
+                <li class="arrow"><a href="#M2">Mens 2 <small> Division 3B</small></a></li>
                 <li class="arrow"><a href="#X1">Mixed 1 <small> Division 3A</small></a></li>
                 <li class="arrow"><a href="#X2">Mixed 2 <small> Division 3B</small></a></li>
-                <li class="arrow"><a href="#X3">Mixed 3 <small> Division 4B</small></a></li>
+                <li class="arrow"><a href="#X3">Mixed 3 <small> Division 5A</small></a></li>
                 <li class="arrow"><a href="#L">Ladies  <small> Division 3</small></a></li>
             </ul>
         </div>
@@ -109,12 +109,12 @@
                 <a href="#" class="back">Teams</a>
             </div>
             <ul class="rounded">
-                <li class="arrow" id="M1-1"><a href="#match">Byron 3  <small class="M1-1D"></small></a></li>
-                <li class="arrow" id="M1-2"><a href="#match">Carlton 1  <small class="M1-2D"></small></a></li>
-                <li class="arrow" id="M1-3"><a href="#match">Crusader  <small class="M1-3D"></small></a></li>
-                <li class="arrow" id="M1-4"><a href="#match">Mansfield Oaktree  <small class="M1-4D"></small></a></li>
-                <li class="arrow" id="M1-5"><a href="#match">Phoenixwood 1  <small class="M1-5D"></small></a></li>
-                <li class="arrow" id="M1-6"><a href="#match">University Staff  <small class="M1-6D"></small></a></li>
+                <li class="arrow" id="M1-1"><a href="#match">Beeston Fields 2  <small class="M1-1D"></small></a></li>
+                <li class="arrow" id="M1-2"><a href="#match">Beeston Valley 1  <small class="M1-2D"></small></a></li>
+                <li class="arrow" id="M1-3"><a href="#match">Byron 3  <small class="M1-3D"></small></a></li>
+                <li class="arrow" id="M1-4"><a href="#match">David Lloyd Aspley 1  <small class="M1-4D"></small></a></li>
+                <li class="arrow" id="M1-5"><a href="#match">Kimberley 1  <small class="M1-5D"></small></a></li>
+                <li class="arrow" id="M1-6"><a href="#match">Naseeb 3  <small class="M1-6D"></small></a></li>
             </ul>
         </div>
 
@@ -124,12 +124,12 @@
                 <a href="#" class="back">Teams</a>
             </div>
             <ul class="rounded">
-                <li class="arrow" id="M2-1"><a href="#match">Beeston Valley 1  <small class="M2-1D"></small></a></li>
-                <li class="arrow" id="M2-2"><a href="#match">Kimberley 1  <small class="M2-2D"></small></a></li>
-                <li class="arrow" id="M2-3"><a href="#match">Phoenixwood 2  <small class="M2-3D"></small></a></li>
-                <li class="arrow" id="M2-4"><a href="#match">Redhill 1  <small class="M2-4D"></small></a></li>
-                <li class="arrow" id="M2-5"><a href="#match">Rolls Royce 3  <small class="M2-5D"></small></a></li>
-                <li class="arrow" id="M2-6"><a href="#match">University 4  <small class="M2-6D"></small></a></li>
+                <li class="arrow" id="M2-1"><a href="#match">Arboretum 1  <small class="M2-1D"></small></a></li>
+                <li class="arrow" id="M2-2"><a href="#match">Carlton 2  <small class="M2-2D"></small></a></li>
+                <li class="arrow" id="M2-3"><a href="#match">East Leake 2  <small class="M2-3D"></small></a></li>
+                <li class="arrow" id="M2-4"><a href="#match">Naseeb 2  <small class="M2-4D"></small></a></li>
+                <li class="arrow" id="M2-5"><a href="#match">Southwell Centre 1  <small class="M2-5D"></small></a></li>
+                <li class="arrow" id="M2-6"><a href="#match">West Bridgford &amp; LE 3  <small class="M2-6D"></small></a></li>
             </ul>
         </div>
 
@@ -140,11 +140,11 @@
             </div>
             <ul class="rounded">
                 <li class="arrow" id="X1-1"><a href="#match">Beeston Fields 3  <small class="X1-1D"></small></a></li>
-                <li class="arrow" id="X1-2"><a href="#match">Byron 4  <small class="X1-2D"></small></a></li>
-                <li class="arrow" id="X1-3"><a href="#match">David Lloyd Aspley 1  <small class="X1-3D"></small></a></li>
-                <li class="arrow" id="X1-4"><a href="#match">Mapperley Park 4  <small class="X1-4D"></small></a></li>
-                <li class="arrow" id="X1-5"><a href="#match">St Giles 1  <small class="X1-5D"></small></a></li>
-                <li class="arrow" id="X1-6"><a href="#match">University 3  <small class="X1-6D"></small></a></li>
+                <li class="arrow" id="X1-2"><a href="#match">David Lloyd Aspley  <small class="X1-2D"></small></a></li>
+                <li class="arrow" id="X1-3"><a href="#match">Nottingham Vets 2  <small class="X1-3D"></small></a></li>
+                <li class="arrow" id="X1-4"><a href="#match">Rushcliffe Arena 1  <small class="X1-4D"></small></a></li>
+                <li class="arrow" id="X1-5"><a href="#match">Southwell Centre 1  <small class="X1-5D"></small></a></li>
+                <li class="arrow" id="X1-6"><a href="#match">St Giles 2  <small class="X1-6D"></small></a></li>
             </ul>
         </div>
 
@@ -154,12 +154,12 @@
                 <a href="#" class="back">Teams</a>
             </div>
             <ul class="rounded">
-                <li class="arrow" id="X2-1"><a href="#match">Beeston Valley 1  <small class="X2-1D"></small></a></li>
-                <li class="arrow" id="X2-2"><a href="#match">Byron 3  <small class="X2-2D"></small></a></li>
-                <li class="arrow" id="X2-3"><a href="#match">Kimberley 1  <small class="X2-3D"></small></a></li>
-                <li class="arrow" id="X2-4"><a href="#match">Mapperley Park 5  <small class="X2-4D"></small></a></li>
-                <li class="arrow" id="X2-5"><a href="#match">Redhill 1  <small class="X2-5D"></small></a></li>
-                <li class="arrow" id="X2-6"><a href="#match">Rolls Royce  <small class="X2-6D"></small></a></li>
+                <li class="arrow" id="X2-1"><a href="#match">Arboretum 1  <small class="X2-1D"></small></a></li>
+                <li class="arrow" id="X2-2"><a href="#match">Beeston Valley 1  <small class="X2-2D"></small></a></li>
+                <li class="arrow" id="X2-3"><a href="#match">Crusader 1  <small class="X2-3D"></small></a></li>
+                <li class="arrow" id="X2-4"><a href="#match">East Leake 2  <small class="X2-4D"></small></a></li>
+                <li class="arrow" id="X2-5"><a href="#match">Kimberley 1  <small class="X2-5D"></small></a></li>
+                <li class="arrow" id="X2-6"><a href="#match">Phoenixwood 3  <small class="X2-6D"></small></a></li>
             </ul>
         </div>
 
@@ -169,12 +169,12 @@
                 <a href="#" class="back">Teams</a>
             </div>
             <ul class="rounded">
-                <li class="arrow" id="X3-1"><a href="#match">Arboretum 1  <small class="X3-1D"></small></a></li>
-                <li class="arrow" id="X3-2"><a href="#match">Beeston Fields 4  <small class="X3-2D"></small></a></li>
-                <li class="arrow" id="X3-3"><a href="#match">Nottingham Vets 3  <small class="X3-3D"></small></a></li>
-                <li class="arrow" id="X3-4"><a href="#match">Phoenixwood 3  <small class="X3-4D"></small></a></li>
-                <li class="arrow" id="X3-5"><a href="#match">Southwell Centre 2  <small class="X3-5D"></small></a></li>
-                <li class="arrow" id="X3-6"><a href="#match">University Staff  <small class="X3-6D"></small></a></li>
+                <li class="arrow" id="X3-1"><a href="#match">Arboretum 2  <small class="X3-1D"></small></a></li>
+                <li class="arrow" id="X3-2"><a href="#match">Byron 5  <small class="X3-2D"></small></a></li>
+                <li class="arrow" id="X3-3"><a href="#match">Kimberley 3  <small class="X3-3D"></small></a></li>
+                <li class="arrow" id="X3-4"><a href="#match">Nottingham Vets 3  <small class="X3-4D"></small></a></li>
+                <li class="arrow" id="X3-5"><a href="#match">St Giles 4  <small class="X3-5D"></small></a></li>
+                <li class="arrow" id="X3-6"><a href="#match">Unity  <small class="X3-6D"></small></a></li>
             </ul>
         </div>
 
@@ -185,11 +185,11 @@
             </div>
             <ul class="rounded">
                 <li class="arrow" id="L-1"><a href="#match">Arboretum  <small class="L-1D"></small></a></li>
-                <li class="arrow" id="L-2"><a href="#match">Beeston Fields 2  <small class="L-2D"></small></a></li>
-                <li class="arrow" id="L-3"><a href="#match">Kimberley  <small class="L-3D"></small></a></li>
-                <li class="arrow" id="L-4"><a href="#match">Phoenixwood 2  <small class="L-4D"></small></a></li>
-                <li class="arrow" id="L-5"><a href="#match">Rushcliffe Arena  <small class="L-5D"></small></a></li>
-                <li class="arrow" id="L-6"><a href="#match">Southwell Centre  <small class="L-6D"></small></a></li>
+                <li class="arrow" id="L-2"><a href="#match">Beeston Valley 1  <small class="L-2D"></small></a></li>
+                <li class="arrow" id="L-3"><a href="#match">Byron 2  <small class="L-3D"></small></a></li>
+                <li class="arrow" id="L-4"><a href="#match">Kimberley  <small class="L-4D"></small></a></li>
+                <li class="arrow" id="L-5"><a href="#match">St Giles 1  <small class="L-5D"></small></a></li>
+                <li class="arrow" id="L-6"><a href="#match">University 2  <small class="L-6D"></small></a></li>
             </ul>
         </div>
 
@@ -291,7 +291,7 @@
             		<td></td>
             		<td id="rubbertit">Rubbers</td>
             		<td id="gametit">Games</td>
-            		<td id="acetit">Aces</td>
+            		<td id="acetit">ACES</td>
             	</tr>
             	<tr>
             		<td id="homeClub"></td>
