--- a/live/club_webapps/crusader.html
+++ b/live/club_webapps/crusader.html
@@ -59,7 +59,7 @@
                 <a class="button slideup" id="infoButton" href="#about">About</a>
             </div>
 
-            <h1>Crusader</h1>
+            <h1 id="ourClubName">Crusader</h1>
 	    <div id="loader">
 	    	<div class="loader">
 			<img src="lib/loader.gif" alt="Loading cache..." width="31" height="31" />
@@ -95,8 +95,8 @@
             <ul class="rounded">
 
                 <li class="arrow"><a href="#M">Mens  <small> Division 2B</small></a></li>
-                <li class="arrow"><a href="#X1">Mixed 1 <small> Division 2A</small></a></li>
-                <li class="arrow"><a href="#X2">Mixed 2 <small> Division 5A</small></a></li>
+                <li class="arrow"><a href="#X1">Mixed 1 <small> Division 3B</small></a></li>
+                <li class="arrow"><a href="#X2">Mixed 2 <small> Division 4A</small></a></li>
                 <li class="arrow"><a href="#L">Ladies  <small> Division 2</small></a></li>
             </ul>
         </div>
@@ -107,11 +107,11 @@
                 <a href="#" class="back">Teams</a>
             </div>
             <ul class="rounded">
-                <li class="arrow" id="M-1"><a href="#match">Boots 1  <small class="M-1D"></small></a></li>
-                <li class="arrow" id="M-2"><a href="#match">Byron 3  <small class="M-2D"></small></a></li>
-                <li class="arrow" id="M-3"><a href="#match">Carlton 1  <small class="M-3D"></small></a></li>
-                <li class="arrow" id="M-4"><a href="#match">Mansfield Oaktree  <small class="M-4D"></small></a></li>
-                <li class="arrow" id="M-5"><a href="#match">Phoenixwood 1  <small class="M-5D"></small></a></li>
+                <li class="arrow" id="M-1"><a href="#match">East Leake 1  <small class="M-1D"></small></a></li>
+                <li class="arrow" id="M-2"><a href="#match">Mansfield Oaktree  <small class="M-2D"></small></a></li>
+                <li class="arrow" id="M-3"><a href="#match">Phoenixwood 1  <small class="M-3D"></small></a></li>
+                <li class="arrow" id="M-4"><a href="#match">St Giles 1  <small class="M-4D"></small></a></li>
+                <li class="arrow" id="M-5"><a href="#match">University 3  <small class="M-5D"></small></a></li>
                 <li class="arrow" id="M-6"><a href="#match">University Staff  <small class="M-6D"></small></a></li>
             </ul>
         </div>
@@ -122,12 +122,12 @@
                 <a href="#" class="back">Teams</a>
             </div>
             <ul class="rounded">
-                <li class="arrow" id="X1-1"><a href="#match">Beeston Fields 2  <small class="X1-1D"></small></a></li>
-                <li class="arrow" id="X1-2"><a href="#match">Bingham 4  <small class="X1-2D"></small></a></li>
-                <li class="arrow" id="X1-3"><a href="#match">Carlton 1  <small class="X1-3D"></small></a></li>
+                <li class="arrow" id="X1-1"><a href="#match">Arboretum 1  <small class="X1-1D"></small></a></li>
+                <li class="arrow" id="X1-2"><a href="#match">Beeston Valley 1  <small class="X1-2D"></small></a></li>
+                <li class="arrow" id="X1-3"><a href="#match">Boots 2  <small class="X1-3D"></small></a></li>
                 <li class="arrow" id="X1-4"><a href="#match">East Leake 2  <small class="X1-4D"></small></a></li>
-                <li class="arrow" id="X1-5"><a href="#match">Mapperley Park 2  <small class="X1-5D"></small></a></li>
-                <li class="arrow" id="X1-6"><a href="#match">Nottingham Vets 1  <small class="X1-6D"></small></a></li>
+                <li class="arrow" id="X1-5"><a href="#match">Kimberley 1  <small class="X1-5D"></small></a></li>
+                <li class="arrow" id="X1-6"><a href="#match">Phoenixwood 3  <small class="X1-6D"></small></a></li>
             </ul>
         </div>
 
@@ -137,12 +137,12 @@
                 <a href="#" class="back">Teams</a>
             </div>
             <ul class="rounded">
-                <li class="arrow" id="X2-1"><a href="#match">Arboretum 2  <small class="X2-1D"></small></a></li>
-                <li class="arrow" id="X2-2"><a href="#match">Byron 5  <small class="X2-2D"></small></a></li>
-                <li class="arrow" id="X2-3"><a href="#match">Carlton 2  <small class="X2-3D"></small></a></li>
-                <li class="arrow" id="X2-4"><a href="#match">Kimberley 3  <small class="X2-4D"></small></a></li>
-                <li class="arrow" id="X2-5"><a href="#match">Nottingham Vets 4  <small class="X2-5D"></small></a></li>
-                <li class="arrow" id="X2-6"><a href="#match">Redhill 2  <small class="X2-6D"></small></a></li>
+                <li class="arrow" id="X2-1"><a href="#match">Beeston Valley 2  <small class="X2-1D"></small></a></li>
+                <li class="arrow" id="X2-2"><a href="#match">Carlton 2  <small class="X2-2D"></small></a></li>
+                <li class="arrow" id="X2-3"><a href="#match">East Leake 3  <small class="X2-3D"></small></a></li>
+                <li class="arrow" id="X2-4"><a href="#match">Mapperley Park 5  <small class="X2-4D"></small></a></li>
+                <li class="arrow" id="X2-5"><a href="#match">Phoenixwood 4  <small class="X2-5D"></small></a></li>
+                <li class="arrow" id="X2-6"><a href="#match">Redhill 1  <small class="X2-6D"></small></a></li>
             </ul>
         </div>
 
@@ -152,11 +152,12 @@
                 <a href="#" class="back">Teams</a>
             </div>
             <ul class="rounded">
-                <li class="arrow" id="L-1"><a href="#match">Beeston Valley 1  <small class="L-1D"></small></a></li>
-                <li class="arrow" id="L-2"><a href="#match">Carlton  <small class="L-2D"></small></a></li>
-                <li class="arrow" id="L-3"><a href="#match">Forest 2  <small class="L-3D"></small></a></li>
-                <li class="arrow" id="L-4"><a href="#match">Rolls Royce  <small class="L-4D"></small></a></li>
-                <li class="arrow" id="L-5"><a href="#match">University 1  <small class="L-5D"></small></a></li>
+                <li class="arrow" id="L-1"><a href="#match">Carlton 1  <small class="L-1D"></small></a></li>
+                <li class="arrow" id="L-2"><a href="#match">Forest 2  <small class="L-2D"></small></a></li>
+                <li class="arrow" id="L-3"><a href="#match">Mapperley Park 2  <small class="L-3D"></small></a></li>
+                <li class="arrow" id="L-4"><a href="#match">Nottingham Vets 2  <small class="L-4D"></small></a></li>
+                <li class="arrow" id="L-5"><a href="#match">Phoenixwood 2  <small class="L-5D"></small></a></li>
+                <li class="arrow" id="L-6"><a href="#match">Southwell Centre  <small class="L-6D"></small></a></li>
             </ul>
         </div>
 
@@ -258,7 +259,7 @@
             		<td></td>
             		<td id="rubbertit">Rubbers</td>
             		<td id="gametit">Games</td>
-            		<td id="acetit">Aces</td>
+            		<td id="acetit">ACES</td>
             	</tr>
             	<tr>
             		<td id="homeClub"></td>
