--- a/live/club_webapps/david_lloyd_aspley.html
+++ b/live/club_webapps/david_lloyd_aspley.html
@@ -59,7 +59,7 @@
                 <a class="button slideup" id="infoButton" href="#about">About</a>
             </div>
 
-            <h1>David Lloyd Aspley</h1>
+            <h1 id="ourClubName">David Lloyd Aspley</h1>
 	    <div id="loader">
 	    	<div class="loader">
 			<img src="lib/loader.gif" alt="Loading cache..." width="31" height="31" />
@@ -94,11 +94,10 @@
             </div>
             <ul class="rounded">
 
-                <li class="arrow"><a href="#M1">Mens 1 <small> Division 4A</small></a></li>
-                <li class="arrow"><a href="#M2">Mens 2 <small> Division 4B</small></a></li>
-                <li class="arrow"><a href="#M3">Mens 3 <small> Division 5A</small></a></li>
-                <li class="arrow"><a href="#X1">Mixed 1 <small> Division 3A</small></a></li>
-                <li class="arrow"><a href="#X2">Mixed 2 <small> Division 4A</small></a></li>
+                <li class="arrow"><a href="#M1">Mens 1 <small> Division 3A</small></a></li>
+                <li class="arrow"><a href="#M2">Mens 2 <small> Division 5A</small></a></li>
+                <li class="arrow"><a href="#M3">Mens 3 <small> Division 5B</small></a></li>
+                <li class="arrow"><a href="#X">Mixed  <small> Division 3A</small></a></li>
             </ul>
         </div>
 
@@ -108,12 +107,12 @@
                 <a href="#" class="back">Teams</a>
             </div>
             <ul class="rounded">
-                <li class="arrow" id="M1-1"><a href="#match">Beeston Valley 2  <small class="M1-1D"></small></a></li>
-                <li class="arrow" id="M1-2"><a href="#match">East Leake 3  <small class="M1-2D"></small></a></li>
-                <li class="arrow" id="M1-3"><a href="#match">Nottingham Vets 2  <small class="M1-3D"></small></a></li>
-                <li class="arrow" id="M1-4"><a href="#match">St Giles 2  <small class="M1-4D"></small></a></li>
-                <li class="arrow" id="M1-5"><a href="#match">West Bridgford &amp; LE 3  <small class="M1-5D"></small></a></li>
-                <li class="arrow" id="M1-6"><a href="#match">Woodborough 1  <small class="M1-6D"></small></a></li>
+                <li class="arrow" id="M1-1"><a href="#match">Beeston Fields 2  <small class="M1-1D"></small></a></li>
+                <li class="arrow" id="M1-2"><a href="#match">Beeston Valley 1  <small class="M1-2D"></small></a></li>
+                <li class="arrow" id="M1-3"><a href="#match">Boots 1  <small class="M1-3D"></small></a></li>
+                <li class="arrow" id="M1-4"><a href="#match">Byron 3  <small class="M1-4D"></small></a></li>
+                <li class="arrow" id="M1-5"><a href="#match">Kimberley 1  <small class="M1-5D"></small></a></li>
+                <li class="arrow" id="M1-6"><a href="#match">Naseeb 3  <small class="M1-6D"></small></a></li>
             </ul>
         </div>
 
@@ -123,12 +122,13 @@
                 <a href="#" class="back">Teams</a>
             </div>
             <ul class="rounded">
-                <li class="arrow" id="M2-1"><a href="#match">Arboretum 1  <small class="M2-1D"></small></a></li>
-                <li class="arrow" id="M2-2"><a href="#match">Byron 4  <small class="M2-2D"></small></a></li>
-                <li class="arrow" id="M2-3"><a href="#match">Mapperley Park 4  <small class="M2-3D"></small></a></li>
-                <li class="arrow" id="M2-4"><a href="#match">Naseeb 3  <small class="M2-4D"></small></a></li>
-                <li class="arrow" id="M2-5"><a href="#match">Phoenixwood 3  <small class="M2-5D"></small></a></li>
-                <li class="arrow" id="M2-6"><a href="#match">Southwell Centre 2  <small class="M2-6D"></small></a></li>
+                <li class="arrow" id="M2-1"><a href="#match">Arboretum 2  <small class="M2-1D"></small></a></li>
+                <li class="arrow" id="M2-2"><a href="#match">Experian  <small class="M2-2D"></small></a></li>
+                <li class="arrow" id="M2-3"><a href="#match">Kimberley 2  <small class="M2-3D"></small></a></li>
+                <li class="arrow" id="M2-4"><a href="#match">Phoenixwood 3  <small class="M2-4D"></small></a></li>
+                <li class="arrow" id="M2-5"><a href="#match">Southwell Centre 3  <small class="M2-5D"></small></a></li>
+                <li class="arrow" id="M2-6"><a href="#match">Trent Uni Students 1  <small class="M2-6D"></small></a></li>
+                <li class="arrow" id="M2-7"><a href="#match">Unity 2  <small class="M2-7D"></small></a></li>
             </ul>
         </div>
 
@@ -138,41 +138,28 @@
                 <a href="#" class="back">Teams</a>
             </div>
             <ul class="rounded">
-                <li class="arrow" id="M3-1"><a href="#match">Arboretum 2  <small class="M3-1D"></small></a></li>
-                <li class="arrow" id="M3-2"><a href="#match">Carlton 4  <small class="M3-2D"></small></a></li>
-                <li class="arrow" id="M3-3"><a href="#match">Kimberley 2  <small class="M3-3D"></small></a></li>
-                <li class="arrow" id="M3-4"><a href="#match">Radcliffe Knights  <small class="M3-4D"></small></a></li>
-                <li class="arrow" id="M3-5"><a href="#match">Rushcliffe Arena 1  <small class="M3-5D"></small></a></li>
+                <li class="arrow" id="M3-1"><a href="#match">Arboretum 3  <small class="M3-1D"></small></a></li>
+                <li class="arrow" id="M3-2"><a href="#match">Beeston Valley 3  <small class="M3-2D"></small></a></li>
+                <li class="arrow" id="M3-3"><a href="#match">Redhill 2  <small class="M3-3D"></small></a></li>
+                <li class="arrow" id="M3-4"><a href="#match">Rushcliffe Arena 2  <small class="M3-4D"></small></a></li>
+                <li class="arrow" id="M3-5"><a href="#match">St Giles 3  <small class="M3-5D"></small></a></li>
+                <li class="arrow" id="M3-6"><a href="#match">Trent Uni Students 2  <small class="M3-6D"></small></a></li>
+                <li class="arrow" id="M3-7"><a href="#match">Woodborough  <small class="M3-7D"></small></a></li>
             </ul>
         </div>
 
-        <div id="X1" class="fixtures">
+        <div id="X" class="fixtures">
             <div class="toolbar">
-                <h1>Mixed 1</h1>
+                <h1>Mixed </h1>
                 <a href="#" class="back">Teams</a>
             </div>
             <ul class="rounded">
-                <li class="arrow" id="X1-1"><a href="#match">Beeston Fields 3  <small class="X1-1D"></small></a></li>
-                <li class="arrow" id="X1-2"><a href="#match">Boots 1  <small class="X1-2D"></small></a></li>
-                <li class="arrow" id="X1-3"><a href="#match">Byron 4  <small class="X1-3D"></small></a></li>
-                <li class="arrow" id="X1-4"><a href="#match">Mapperley Park 4  <small class="X1-4D"></small></a></li>
-                <li class="arrow" id="X1-5"><a href="#match">St Giles 1  <small class="X1-5D"></small></a></li>
-                <li class="arrow" id="X1-6"><a href="#match">University 3  <small class="X1-6D"></small></a></li>
-            </ul>
-        </div>
-
-        <div id="X2" class="fixtures">
-            <div class="toolbar">
-                <h1>Mixed 2</h1>
-                <a href="#" class="back">Teams</a>
-            </div>
-            <ul class="rounded">
-                <li class="arrow" id="X2-1"><a href="#match">Beeston Valley 2  <small class="X2-1D"></small></a></li>
-                <li class="arrow" id="X2-2"><a href="#match">East Leake 3  <small class="X2-2D"></small></a></li>
-                <li class="arrow" id="X2-3"><a href="#match">Kimberley 2  <small class="X2-3D"></small></a></li>
-                <li class="arrow" id="X2-4"><a href="#match">Phoenixwood 4  <small class="X2-4D"></small></a></li>
-                <li class="arrow" id="X2-5"><a href="#match">Southwell Centre 1  <small class="X2-5D"></small></a></li>
-                <li class="arrow" id="X2-6"><a href="#match">St Giles 2  <small class="X2-6D"></small></a></li>
+                <li class="arrow" id="X-1"><a href="#match">Beeston Fields 3  <small class="X-1D"></small></a></li>
+                <li class="arrow" id="X-2"><a href="#match">Boots 1  <small class="X-2D"></small></a></li>
+                <li class="arrow" id="X-3"><a href="#match">Nottingham Vets 2  <small class="X-3D"></small></a></li>
+                <li class="arrow" id="X-4"><a href="#match">Rushcliffe Arena 1  <small class="X-4D"></small></a></li>
+                <li class="arrow" id="X-5"><a href="#match">Southwell Centre 1  <small class="X-5D"></small></a></li>
+                <li class="arrow" id="X-6"><a href="#match">St Giles 2  <small class="X-6D"></small></a></li>
             </ul>
         </div>
 
@@ -274,7 +261,7 @@
             		<td></td>
             		<td id="rubbertit">Rubbers</td>
             		<td id="gametit">Games</td>
-            		<td id="acetit">Aces</td>
+            		<td id="acetit">ACES</td>
             	</tr>
             	<tr>
             		<td id="homeClub"></td>
