--- a/live/club_webapps/mansfield_oaktree.html
+++ b/live/club_webapps/mansfield_oaktree.html
@@ -59,7 +59,7 @@
                 <a class="button slideup" id="infoButton" href="#about">About</a>
             </div>
 
-            <h1>Mansfield Oaktree</h1>
+            <h1 id="ourClubName">Mansfield Oaktree</h1>
 	    <div id="loader">
 	    	<div class="loader">
 			<img src="lib/loader.gif" alt="Loading cache..." width="31" height="31" />
@@ -106,11 +106,11 @@
                 <a href="#" class="back">Teams</a>
             </div>
             <ul class="rounded">
-                <li class="arrow" id="M-1"><a href="#match">Boots 1  <small class="M-1D"></small></a></li>
-                <li class="arrow" id="M-2"><a href="#match">Byron 3  <small class="M-2D"></small></a></li>
-                <li class="arrow" id="M-3"><a href="#match">Carlton 1  <small class="M-3D"></small></a></li>
-                <li class="arrow" id="M-4"><a href="#match">Crusader  <small class="M-4D"></small></a></li>
-                <li class="arrow" id="M-5"><a href="#match">Phoenixwood 1  <small class="M-5D"></small></a></li>
+                <li class="arrow" id="M-1"><a href="#match">Crusader  <small class="M-1D"></small></a></li>
+                <li class="arrow" id="M-2"><a href="#match">East Leake 1  <small class="M-2D"></small></a></li>
+                <li class="arrow" id="M-3"><a href="#match">Phoenixwood 1  <small class="M-3D"></small></a></li>
+                <li class="arrow" id="M-4"><a href="#match">St Giles 1  <small class="M-4D"></small></a></li>
+                <li class="arrow" id="M-5"><a href="#match">University 3  <small class="M-5D"></small></a></li>
                 <li class="arrow" id="M-6"><a href="#match">University Staff  <small class="M-6D"></small></a></li>
             </ul>
         </div>
@@ -121,13 +121,13 @@
                 <a href="#" class="back">Teams</a>
             </div>
             <ul class="rounded">
-                <li class="arrow" id="X-1"><a href="#match">Bingham 3  <small class="X-1D"></small></a></li>
-                <li class="arrow" id="X-2"><a href="#match">East Leake 1  <small class="X-2D"></small></a></li>
-                <li class="arrow" id="X-3"><a href="#match">Forest 2  <small class="X-3D"></small></a></li>
-                <li class="arrow" id="X-4"><a href="#match">Mapperley Park 1  <small class="X-4D"></small></a></li>
-                <li class="arrow" id="X-5"><a href="#match">Phoenixwood 1  <small class="X-5D"></small></a></li>
-                <li class="arrow" id="X-6"><a href="#match">University 2  <small class="X-6D"></small></a></li>
-                <li class="arrow" id="X-7"><a href="#match">West Bridgford &amp; LE 2  <small class="X-7D"></small></a></li>
+                <li class="arrow" id="X-1"><a href="#match">Beeston Fields 1  <small class="X-1D"></small></a></li>
+                <li class="arrow" id="X-2"><a href="#match">Bingham 3  <small class="X-2D"></small></a></li>
+                <li class="arrow" id="X-3"><a href="#match">Forest 1  <small class="X-3D"></small></a></li>
+                <li class="arrow" id="X-4"><a href="#match">Forest 2  <small class="X-4D"></small></a></li>
+                <li class="arrow" id="X-5"><a href="#match">Mapperley Park 2  <small class="X-5D"></small></a></li>
+                <li class="arrow" id="X-6"><a href="#match">Phoenixwood 1  <small class="X-6D"></small></a></li>
+                <li class="arrow" id="X-7"><a href="#match">University 2  <small class="X-7D"></small></a></li>
             </ul>
         </div>
 
@@ -137,12 +137,12 @@
                 <a href="#" class="back">Teams</a>
             </div>
             <ul class="rounded">
-                <li class="arrow" id="L-1"><a href="#match">Bingham 3  <small class="L-1D"></small></a></li>
-                <li class="arrow" id="L-2"><a href="#match">East Leake  <small class="L-2D"></small></a></li>
+                <li class="arrow" id="L-1"><a href="#match">Bingham 2  <small class="L-1D"></small></a></li>
+                <li class="arrow" id="L-2"><a href="#match">Bingham 3  <small class="L-2D"></small></a></li>
                 <li class="arrow" id="L-3"><a href="#match">Mapperley Park 1  <small class="L-3D"></small></a></li>
-                <li class="arrow" id="L-4"><a href="#match">Mapperley Park 2  <small class="L-4D"></small></a></li>
-                <li class="arrow" id="L-5"><a href="#match">Nottingham Vets 2  <small class="L-5D"></small></a></li>
-                <li class="arrow" id="L-6"><a href="#match">Phoenixwood 1  <small class="L-6D"></small></a></li>
+                <li class="arrow" id="L-4"><a href="#match">Nottingham Vets 1  <small class="L-4D"></small></a></li>
+                <li class="arrow" id="L-5"><a href="#match">Rolls Royce  <small class="L-5D"></small></a></li>
+                <li class="arrow" id="L-6"><a href="#match">University 1  <small class="L-6D"></small></a></li>
             </ul>
         </div>
 
@@ -244,7 +244,7 @@
             		<td></td>
             		<td id="rubbertit">Rubbers</td>
             		<td id="gametit">Games</td>
-            		<td id="acetit">Aces</td>
+            		<td id="acetit">ACES</td>
             	</tr>
             	<tr>
             		<td id="homeClub"></td>
