--- a/live/club_webapps/nottingham_vets.html
+++ b/live/club_webapps/nottingham_vets.html
@@ -59,7 +59,7 @@
                 <a class="button slideup" id="infoButton" href="#about">About</a>
             </div>
 
-            <h1>Nottingham Vets</h1>
+            <h1 id="ourClubName">Nottingham Vets</h1>
 	    <div id="loader">
 	    	<div class="loader">
 			<img src="lib/loader.gif" alt="Loading cache..." width="31" height="31" />
@@ -97,11 +97,11 @@
                 <li class="arrow"><a href="#M1">Mens 1 <small> Division 2A</small></a></li>
                 <li class="arrow"><a href="#M2">Mens 2 <small> Division 4A</small></a></li>
                 <li class="arrow"><a href="#X1">Mixed 1 <small> Division 2A</small></a></li>
-                <li class="arrow"><a href="#X2">Mixed 2 <small> Division 2B</small></a></li>
-                <li class="arrow"><a href="#X3">Mixed 3 <small> Division 4B</small></a></li>
-                <li class="arrow"><a href="#X4">Mixed 4 <small> Division 5A</small></a></li>
-                <li class="arrow"><a href="#L1">Ladies 1 <small>Premier </small></a></li>
-                <li class="arrow"><a href="#L2">Ladies 2 <small> Division 1</small></a></li>
+                <li class="arrow"><a href="#X2">Mixed 2 <small> Division 3A</small></a></li>
+                <li class="arrow"><a href="#X3">Mixed 3 <small> Division 5A</small></a></li>
+                <li class="arrow"><a href="#X4">Mixed 4 <small> Division 5B</small></a></li>
+                <li class="arrow"><a href="#L1">Ladies 1 <small> Division 1</small></a></li>
+                <li class="arrow"><a href="#L2">Ladies 2 <small> Division 2</small></a></li>
             </ul>
         </div>
 
@@ -111,12 +111,12 @@
                 <a href="#" class="back">Teams</a>
             </div>
             <ul class="rounded">
-                <li class="arrow" id="M1-1"><a href="#match">Beeston Fields 1  <small class="M1-1D"></small></a></li>
-                <li class="arrow" id="M1-2"><a href="#match">Bingham 4  <small class="M1-2D"></small></a></li>
-                <li class="arrow" id="M1-3"><a href="#match">Carlton 2  <small class="M1-3D"></small></a></li>
-                <li class="arrow" id="M1-4"><a href="#match">Mapperley Park 3  <small class="M1-4D"></small></a></li>
-                <li class="arrow" id="M1-5"><a href="#match">Naseeb 1  <small class="M1-5D"></small></a></li>
-                <li class="arrow" id="M1-6"><a href="#match">Southwell Centre 1  <small class="M1-6D"></small></a></li>
+                <li class="arrow" id="M1-1"><a href="#match">Bingham 4  <small class="M1-1D"></small></a></li>
+                <li class="arrow" id="M1-2"><a href="#match">Forest 2  <small class="M1-2D"></small></a></li>
+                <li class="arrow" id="M1-3"><a href="#match">Mapperley Park 3  <small class="M1-3D"></small></a></li>
+                <li class="arrow" id="M1-4"><a href="#match">Naseeb 1  <small class="M1-4D"></small></a></li>
+                <li class="arrow" id="M1-5"><a href="#match">Rolls Royce 3  <small class="M1-5D"></small></a></li>
+                <li class="arrow" id="M1-6"><a href="#match">University 4  <small class="M1-6D"></small></a></li>
             </ul>
         </div>
 
@@ -127,11 +127,11 @@
             </div>
             <ul class="rounded">
                 <li class="arrow" id="M2-1"><a href="#match">Beeston Valley 2  <small class="M2-1D"></small></a></li>
-                <li class="arrow" id="M2-2"><a href="#match">David Lloyd Aspley 1  <small class="M2-2D"></small></a></li>
+                <li class="arrow" id="M2-2"><a href="#match">Carlton 3  <small class="M2-2D"></small></a></li>
                 <li class="arrow" id="M2-3"><a href="#match">East Leake 3  <small class="M2-3D"></small></a></li>
-                <li class="arrow" id="M2-4"><a href="#match">St Giles 2  <small class="M2-4D"></small></a></li>
-                <li class="arrow" id="M2-5"><a href="#match">West Bridgford &amp; LE 3  <small class="M2-5D"></small></a></li>
-                <li class="arrow" id="M2-6"><a href="#match">Woodborough 1  <small class="M2-6D"></small></a></li>
+                <li class="arrow" id="M2-4"><a href="#match">Rushcliffe Arena 1  <small class="M2-4D"></small></a></li>
+                <li class="arrow" id="M2-5"><a href="#match">St Giles 2  <small class="M2-5D"></small></a></li>
+                <li class="arrow" id="M2-6"><a href="#match">Unity 1  <small class="M2-6D"></small></a></li>
             </ul>
         </div>
 
@@ -144,9 +144,9 @@
                 <li class="arrow" id="X1-1"><a href="#match">Beeston Fields 2  <small class="X1-1D"></small></a></li>
                 <li class="arrow" id="X1-2"><a href="#match">Bingham 4  <small class="X1-2D"></small></a></li>
                 <li class="arrow" id="X1-3"><a href="#match">Carlton 1  <small class="X1-3D"></small></a></li>
-                <li class="arrow" id="X1-4"><a href="#match">Crusader 1  <small class="X1-4D"></small></a></li>
-                <li class="arrow" id="X1-5"><a href="#match">East Leake 2  <small class="X1-5D"></small></a></li>
-                <li class="arrow" id="X1-6"><a href="#match">Mapperley Park 2  <small class="X1-6D"></small></a></li>
+                <li class="arrow" id="X1-4"><a href="#match">East Leake 1  <small class="X1-4D"></small></a></li>
+                <li class="arrow" id="X1-5"><a href="#match">St Giles 1  <small class="X1-5D"></small></a></li>
+                <li class="arrow" id="X1-6"><a href="#match">University 3  <small class="X1-6D"></small></a></li>
             </ul>
         </div>
 
@@ -156,12 +156,12 @@
                 <a href="#" class="back">Teams</a>
             </div>
             <ul class="rounded">
-                <li class="arrow" id="X2-1"><a href="#match">Bingham 5  <small class="X2-1D"></small></a></li>
-                <li class="arrow" id="X2-2"><a href="#match">Forest 3  <small class="X2-2D"></small></a></li>
-                <li class="arrow" id="X2-3"><a href="#match">Mapperley Park 3  <small class="X2-3D"></small></a></li>
-                <li class="arrow" id="X2-4"><a href="#match">Phoenixwood 2  <small class="X2-4D"></small></a></li>
-                <li class="arrow" id="X2-5"><a href="#match">Rushcliffe Arena 1  <small class="X2-5D"></small></a></li>
-                <li class="arrow" id="X2-6"><a href="#match">West Bridgford &amp; LE 3  <small class="X2-6D"></small></a></li>
+                <li class="arrow" id="X2-1"><a href="#match">Beeston Fields 3  <small class="X2-1D"></small></a></li>
+                <li class="arrow" id="X2-2"><a href="#match">Boots 1  <small class="X2-2D"></small></a></li>
+                <li class="arrow" id="X2-3"><a href="#match">David Lloyd Aspley  <small class="X2-3D"></small></a></li>
+                <li class="arrow" id="X2-4"><a href="#match">Rushcliffe Arena 1  <small class="X2-4D"></small></a></li>
+                <li class="arrow" id="X2-5"><a href="#match">Southwell Centre 1  <small class="X2-5D"></small></a></li>
+                <li class="arrow" id="X2-6"><a href="#match">St Giles 2  <small class="X2-6D"></small></a></li>
             </ul>
         </div>
 
@@ -171,12 +171,12 @@
                 <a href="#" class="back">Teams</a>
             </div>
             <ul class="rounded">
-                <li class="arrow" id="X3-1"><a href="#match">Arboretum 1  <small class="X3-1D"></small></a></li>
-                <li class="arrow" id="X3-2"><a href="#match">Beeston Fields 4  <small class="X3-2D"></small></a></li>
-                <li class="arrow" id="X3-3"><a href="#match">Boots 3  <small class="X3-3D"></small></a></li>
-                <li class="arrow" id="X3-4"><a href="#match">Phoenixwood 3  <small class="X3-4D"></small></a></li>
-                <li class="arrow" id="X3-5"><a href="#match">Southwell Centre 2  <small class="X3-5D"></small></a></li>
-                <li class="arrow" id="X3-6"><a href="#match">University Staff  <small class="X3-6D"></small></a></li>
+                <li class="arrow" id="X3-1"><a href="#match">Arboretum 2  <small class="X3-1D"></small></a></li>
+                <li class="arrow" id="X3-2"><a href="#match">Boots 3  <small class="X3-2D"></small></a></li>
+                <li class="arrow" id="X3-3"><a href="#match">Byron 5  <small class="X3-3D"></small></a></li>
+                <li class="arrow" id="X3-4"><a href="#match">Kimberley 3  <small class="X3-4D"></small></a></li>
+                <li class="arrow" id="X3-5"><a href="#match">St Giles 4  <small class="X3-5D"></small></a></li>
+                <li class="arrow" id="X3-6"><a href="#match">Unity  <small class="X3-6D"></small></a></li>
             </ul>
         </div>
 
@@ -186,12 +186,13 @@
                 <a href="#" class="back">Teams</a>
             </div>
             <ul class="rounded">
-                <li class="arrow" id="X4-1"><a href="#match">Arboretum 2  <small class="X4-1D"></small></a></li>
-                <li class="arrow" id="X4-2"><a href="#match">Byron 5  <small class="X4-2D"></small></a></li>
-                <li class="arrow" id="X4-3"><a href="#match">Carlton 2  <small class="X4-3D"></small></a></li>
-                <li class="arrow" id="X4-4"><a href="#match">Crusader 2  <small class="X4-4D"></small></a></li>
-                <li class="arrow" id="X4-5"><a href="#match">Kimberley 3  <small class="X4-5D"></small></a></li>
-                <li class="arrow" id="X4-6"><a href="#match">Redhill 2  <small class="X4-6D"></small></a></li>
+                <li class="arrow" id="X4-1"><a href="#match">Beeston Valley 3  <small class="X4-1D"></small></a></li>
+                <li class="arrow" id="X4-2"><a href="#match">Kimberley 2  <small class="X4-2D"></small></a></li>
+                <li class="arrow" id="X4-3"><a href="#match">Phoenixwood 5  <small class="X4-3D"></small></a></li>
+                <li class="arrow" id="X4-4"><a href="#match">Redhill 2  <small class="X4-4D"></small></a></li>
+                <li class="arrow" id="X4-5"><a href="#match">Rushcliffe Arena 2  <small class="X4-5D"></small></a></li>
+                <li class="arrow" id="X4-6"><a href="#match">St Giles 3  <small class="X4-6D"></small></a></li>
+                <li class="arrow" id="X4-7"><a href="#match">Trent Uni Students  <small class="X4-7D"></small></a></li>
             </ul>
         </div>
 
@@ -201,12 +202,12 @@
                 <a href="#" class="back">Teams</a>
             </div>
             <ul class="rounded">
-                <li class="arrow" id="L1-1"><a href="#match">Beeston Fields 1  <small class="L1-1D"></small></a></li>
-                <li class="arrow" id="L1-2"><a href="#match">Bingham 1  <small class="L1-2D"></small></a></li>
-                <li class="arrow" id="L1-3"><a href="#match">Bingham 2  <small class="L1-3D"></small></a></li>
-                <li class="arrow" id="L1-4"><a href="#match">Byron 1  <small class="L1-4D"></small></a></li>
-                <li class="arrow" id="L1-5"><a href="#match">Forest 1  <small class="L1-5D"></small></a></li>
-                <li class="arrow" id="L1-6"><a href="#match">West Bridgford &amp; LE  <small class="L1-6D"></small></a></li>
+                <li class="arrow" id="L1-1"><a href="#match">Bingham 2  <small class="L1-1D"></small></a></li>
+                <li class="arrow" id="L1-2"><a href="#match">Bingham 3  <small class="L1-2D"></small></a></li>
+                <li class="arrow" id="L1-3"><a href="#match">Mansfield Oaktree  <small class="L1-3D"></small></a></li>
+                <li class="arrow" id="L1-4"><a href="#match">Mapperley Park 1  <small class="L1-4D"></small></a></li>
+                <li class="arrow" id="L1-5"><a href="#match">Rolls Royce  <small class="L1-5D"></small></a></li>
+                <li class="arrow" id="L1-6"><a href="#match">University 1  <small class="L1-6D"></small></a></li>
             </ul>
         </div>
 
@@ -216,12 +217,12 @@
                 <a href="#" class="back">Teams</a>
             </div>
             <ul class="rounded">
-                <li class="arrow" id="L2-1"><a href="#match">Bingham 3  <small class="L2-1D"></small></a></li>
-                <li class="arrow" id="L2-2"><a href="#match">East Leake  <small class="L2-2D"></small></a></li>
-                <li class="arrow" id="L2-3"><a href="#match">Mansfield Oaktree  <small class="L2-3D"></small></a></li>
-                <li class="arrow" id="L2-4"><a href="#match">Mapperley Park 1  <small class="L2-4D"></small></a></li>
-                <li class="arrow" id="L2-5"><a href="#match">Mapperley Park 2  <small class="L2-5D"></small></a></li>
-                <li class="arrow" id="L2-6"><a href="#match">Phoenixwood 1  <small class="L2-6D"></small></a></li>
+                <li class="arrow" id="L2-1"><a href="#match">Carlton 1  <small class="L2-1D"></small></a></li>
+                <li class="arrow" id="L2-2"><a href="#match">Crusader  <small class="L2-2D"></small></a></li>
+                <li class="arrow" id="L2-3"><a href="#match">Forest 2  <small class="L2-3D"></small></a></li>
+                <li class="arrow" id="L2-4"><a href="#match">Mapperley Park 2  <small class="L2-4D"></small></a></li>
+                <li class="arrow" id="L2-5"><a href="#match">Phoenixwood 2  <small class="L2-5D"></small></a></li>
+                <li class="arrow" id="L2-6"><a href="#match">Southwell Centre  <small class="L2-6D"></small></a></li>
             </ul>
         </div>
 
@@ -323,7 +324,7 @@
             		<td></td>
             		<td id="rubbertit">Rubbers</td>
             		<td id="gametit">Games</td>
-            		<td id="acetit">Aces</td>
+            		<td id="acetit">ACES</td>
             	</tr>
             	<tr>
             		<td id="homeClub"></td>
