--- a/live/club_webapps/southwell_centre.html
+++ b/live/club_webapps/southwell_centre.html
@@ -59,7 +59,7 @@
                 <a class="button slideup" id="infoButton" href="#about">About</a>
             </div>
 
-            <h1>Southwell Centre</h1>
+            <h1 id="ourClubName">Southwell Centre</h1>
 	    <div id="loader">
 	    	<div class="loader">
 			<img src="lib/loader.gif" alt="Loading cache..." width="31" height="31" />
@@ -94,12 +94,12 @@
             </div>
             <ul class="rounded">
 
-                <li class="arrow"><a href="#M1">Mens 1 <small> Division 2A</small></a></li>
+                <li class="arrow"><a href="#M1">Mens 1 <small> Division 3B</small></a></li>
                 <li class="arrow"><a href="#M2">Mens 2 <small> Division 4B</small></a></li>
-                <li class="arrow"><a href="#M3">Mens 3 <small> Division 6A</small></a></li>
-                <li class="arrow"><a href="#X1">Mixed 1 <small> Division 4A</small></a></li>
+                <li class="arrow"><a href="#M3">Mens 3 <small> Division 5A</small></a></li>
+                <li class="arrow"><a href="#X1">Mixed 1 <small> Division 3A</small></a></li>
                 <li class="arrow"><a href="#X2">Mixed 2 <small> Division 4B</small></a></li>
-                <li class="arrow"><a href="#L">Ladies  <small> Division 3</small></a></li>
+                <li class="arrow"><a href="#L">Ladies  <small> Division 2</small></a></li>
             </ul>
         </div>
 
@@ -109,12 +109,12 @@
                 <a href="#" class="back">Teams</a>
             </div>
             <ul class="rounded">
-                <li class="arrow" id="M1-1"><a href="#match">Beeston Fields 1  <small class="M1-1D"></small></a></li>
-                <li class="arrow" id="M1-2"><a href="#match">Bingham 4  <small class="M1-2D"></small></a></li>
+                <li class="arrow" id="M1-1"><a href="#match">Arboretum 1  <small class="M1-1D"></small></a></li>
+                <li class="arrow" id="M1-2"><a href="#match">Boots 2  <small class="M1-2D"></small></a></li>
                 <li class="arrow" id="M1-3"><a href="#match">Carlton 2  <small class="M1-3D"></small></a></li>
-                <li class="arrow" id="M1-4"><a href="#match">Mapperley Park 3  <small class="M1-4D"></small></a></li>
-                <li class="arrow" id="M1-5"><a href="#match">Naseeb 1  <small class="M1-5D"></small></a></li>
-                <li class="arrow" id="M1-6"><a href="#match">Nottingham Vets 1  <small class="M1-6D"></small></a></li>
+                <li class="arrow" id="M1-4"><a href="#match">East Leake 2  <small class="M1-4D"></small></a></li>
+                <li class="arrow" id="M1-5"><a href="#match">Naseeb 2  <small class="M1-5D"></small></a></li>
+                <li class="arrow" id="M1-6"><a href="#match">West Bridgford &amp; LE 3  <small class="M1-6D"></small></a></li>
             </ul>
         </div>
 
@@ -124,12 +124,12 @@
                 <a href="#" class="back">Teams</a>
             </div>
             <ul class="rounded">
-                <li class="arrow" id="M2-1"><a href="#match">Arboretum 1  <small class="M2-1D"></small></a></li>
-                <li class="arrow" id="M2-2"><a href="#match">Byron 4  <small class="M2-2D"></small></a></li>
-                <li class="arrow" id="M2-3"><a href="#match">David Lloyd Aspley 2  <small class="M2-3D"></small></a></li>
-                <li class="arrow" id="M2-4"><a href="#match">Mapperley Park 4  <small class="M2-4D"></small></a></li>
-                <li class="arrow" id="M2-5"><a href="#match">Naseeb 3  <small class="M2-5D"></small></a></li>
-                <li class="arrow" id="M2-6"><a href="#match">Phoenixwood 3  <small class="M2-6D"></small></a></li>
+                <li class="arrow" id="M2-1"><a href="#match">Byron 4  <small class="M2-1D"></small></a></li>
+                <li class="arrow" id="M2-2"><a href="#match">East Leake 4  <small class="M2-2D"></small></a></li>
+                <li class="arrow" id="M2-3"><a href="#match">Forest 3  <small class="M2-3D"></small></a></li>
+                <li class="arrow" id="M2-4"><a href="#match">Phoenixwood 2  <small class="M2-4D"></small></a></li>
+                <li class="arrow" id="M2-5"><a href="#match">Radcliffe Knights  <small class="M2-5D"></small></a></li>
+                <li class="arrow" id="M2-6"><a href="#match">Redhill 1  <small class="M2-6D"></small></a></li>
             </ul>
         </div>
 
@@ -139,14 +139,13 @@
                 <a href="#" class="back">Teams</a>
             </div>
             <ul class="rounded">
-                <li class="arrow" id="M3-1"><a href="#match">Arboretum 3  <small class="M3-1D"></small></a></li>
-                <li class="arrow" id="M3-2"><a href="#match">Arboretum 3  <small class="M3-2D"></small></a></li>
+                <li class="arrow" id="M3-1"><a href="#match">Arboretum 2  <small class="M3-1D"></small></a></li>
+                <li class="arrow" id="M3-2"><a href="#match">David Lloyd Aspley 2  <small class="M3-2D"></small></a></li>
                 <li class="arrow" id="M3-3"><a href="#match">Experian  <small class="M3-3D"></small></a></li>
-                <li class="arrow" id="M3-4"><a href="#match">Experian  <small class="M3-4D"></small></a></li>
-                <li class="arrow" id="M3-5"><a href="#match">Rushcliffe Arena 2  <small class="M3-5D"></small></a></li>
-                <li class="arrow" id="M3-6"><a href="#match">Rushcliffe Arena 2  <small class="M3-6D"></small></a></li>
-                <li class="arrow" id="M3-7"><a href="#match">Trent Uni Students  <small class="M3-7D"></small></a></li>
-                <li class="arrow" id="M3-8"><a href="#match">Trent Uni Students  <small class="M3-8D"></small></a></li>
+                <li class="arrow" id="M3-4"><a href="#match">Kimberley 2  <small class="M3-4D"></small></a></li>
+                <li class="arrow" id="M3-5"><a href="#match">Phoenixwood 3  <small class="M3-5D"></small></a></li>
+                <li class="arrow" id="M3-6"><a href="#match">Trent Uni Students 1  <small class="M3-6D"></small></a></li>
+                <li class="arrow" id="M3-7"><a href="#match">Unity 2  <small class="M3-7D"></small></a></li>
             </ul>
         </div>
 
@@ -156,11 +155,11 @@
                 <a href="#" class="back">Teams</a>
             </div>
             <ul class="rounded">
-                <li class="arrow" id="X1-1"><a href="#match">Beeston Valley 2  <small class="X1-1D"></small></a></li>
-                <li class="arrow" id="X1-2"><a href="#match">David Lloyd Aspley 2  <small class="X1-2D"></small></a></li>
-                <li class="arrow" id="X1-3"><a href="#match">East Leake 3  <small class="X1-3D"></small></a></li>
-                <li class="arrow" id="X1-4"><a href="#match">Kimberley 2  <small class="X1-4D"></small></a></li>
-                <li class="arrow" id="X1-5"><a href="#match">Phoenixwood 4  <small class="X1-5D"></small></a></li>
+                <li class="arrow" id="X1-1"><a href="#match">Beeston Fields 3  <small class="X1-1D"></small></a></li>
+                <li class="arrow" id="X1-2"><a href="#match">Boots 1  <small class="X1-2D"></small></a></li>
+                <li class="arrow" id="X1-3"><a href="#match">David Lloyd Aspley  <small class="X1-3D"></small></a></li>
+                <li class="arrow" id="X1-4"><a href="#match">Nottingham Vets 2  <small class="X1-4D"></small></a></li>
+                <li class="arrow" id="X1-5"><a href="#match">Rushcliffe Arena 1  <small class="X1-5D"></small></a></li>
                 <li class="arrow" id="X1-6"><a href="#match">St Giles 2  <small class="X1-6D"></small></a></li>
             </ul>
         </div>
@@ -171,11 +170,11 @@
                 <a href="#" class="back">Teams</a>
             </div>
             <ul class="rounded">
-                <li class="arrow" id="X2-1"><a href="#match">Arboretum 1  <small class="X2-1D"></small></a></li>
-                <li class="arrow" id="X2-2"><a href="#match">Beeston Fields 4  <small class="X2-2D"></small></a></li>
-                <li class="arrow" id="X2-3"><a href="#match">Boots 3  <small class="X2-3D"></small></a></li>
-                <li class="arrow" id="X2-4"><a href="#match">Nottingham Vets 3  <small class="X2-4D"></small></a></li>
-                <li class="arrow" id="X2-5"><a href="#match">Phoenixwood 3  <small class="X2-5D"></small></a></li>
+                <li class="arrow" id="X2-1"><a href="#match">Beeston Fields 4  <small class="X2-1D"></small></a></li>
+                <li class="arrow" id="X2-2"><a href="#match">Byron 4  <small class="X2-2D"></small></a></li>
+                <li class="arrow" id="X2-3"><a href="#match">Carlton 3  <small class="X2-3D"></small></a></li>
+                <li class="arrow" id="X2-4"><a href="#match">Mapperley Park 4  <small class="X2-4D"></small></a></li>
+                <li class="arrow" id="X2-5"><a href="#match">University 4  <small class="X2-5D"></small></a></li>
                 <li class="arrow" id="X2-6"><a href="#match">University Staff  <small class="X2-6D"></small></a></li>
             </ul>
         </div>
@@ -186,12 +185,12 @@
                 <a href="#" class="back">Teams</a>
             </div>
             <ul class="rounded">
-                <li class="arrow" id="L-1"><a href="#match">Arboretum  <small class="L-1D"></small></a></li>
-                <li class="arrow" id="L-2"><a href="#match">Beeston Fields 2  <small class="L-2D"></small></a></li>
-                <li class="arrow" id="L-3"><a href="#match">Boots  <small class="L-3D"></small></a></li>
-                <li class="arrow" id="L-4"><a href="#match">Kimberley  <small class="L-4D"></small></a></li>
-                <li class="arrow" id="L-5"><a href="#match">Phoenixwood 2  <small class="L-5D"></small></a></li>
-                <li class="arrow" id="L-6"><a href="#match">Rushcliffe Arena  <small class="L-6D"></small></a></li>
+                <li class="arrow" id="L-1"><a href="#match">Carlton 1  <small class="L-1D"></small></a></li>
+                <li class="arrow" id="L-2"><a href="#match">Crusader  <small class="L-2D"></small></a></li>
+                <li class="arrow" id="L-3"><a href="#match">Forest 2  <small class="L-3D"></small></a></li>
+                <li class="arrow" id="L-4"><a href="#match">Mapperley Park 2  <small class="L-4D"></small></a></li>
+                <li class="arrow" id="L-5"><a href="#match">Nottingham Vets 2  <small class="L-5D"></small></a></li>
+                <li class="arrow" id="L-6"><a href="#match">Phoenixwood 2  <small class="L-6D"></small></a></li>
             </ul>
         </div>
 
@@ -293,7 +292,7 @@
             		<td></td>
             		<td id="rubbertit">Rubbers</td>
             		<td id="gametit">Games</td>
-            		<td id="acetit">Aces</td>
+            		<td id="acetit">ACES</td>
             	</tr>
             	<tr>
             		<td id="homeClub"></td>
