--- a/live/club_webapps/st_giles.html
+++ b/live/club_webapps/st_giles.html
@@ -59,7 +59,7 @@
                 <a class="button slideup" id="infoButton" href="#about">About</a>
             </div>
 
-            <h1>St Giles</h1>
+            <h1 id="ourClubName">St Giles</h1>
 	    <div id="loader">
 	    	<div class="loader">
 			<img src="lib/loader.gif" alt="Loading cache..." width="31" height="31" />
@@ -94,13 +94,14 @@
             </div>
             <ul class="rounded">
 
-                <li class="arrow"><a href="#M1">Mens 1 <small> Division 3B</small></a></li>
+                <li class="arrow"><a href="#M1">Mens 1 <small> Division 2B</small></a></li>
                 <li class="arrow"><a href="#M2">Mens 2 <small> Division 4A</small></a></li>
                 <li class="arrow"><a href="#M3">Mens 3 <small> Division 5B</small></a></li>
-                <li class="arrow"><a href="#X1">Mixed 1 <small> Division 3A</small></a></li>
-                <li class="arrow"><a href="#X2">Mixed 2 <small> Division 4A</small></a></li>
+                <li class="arrow"><a href="#X1">Mixed 1 <small> Division 2A</small></a></li>
+                <li class="arrow"><a href="#X2">Mixed 2 <small> Division 3A</small></a></li>
+                <li class="arrow"><a href="#X4">Mixed 4 <small> Division 5A</small></a></li>
                 <li class="arrow"><a href="#X3">Mixed 3 <small> Division 5B</small></a></li>
-                <li class="arrow"><a href="#L1">Ladies 1 <small> Division 4</small></a></li>
+                <li class="arrow"><a href="#L1">Ladies 1 <small> Division 3</small></a></li>
                 <li class="arrow"><a href="#L2">Ladies 2 <small> Division 4</small></a></li>
             </ul>
         </div>
@@ -111,12 +112,12 @@
                 <a href="#" class="back">Teams</a>
             </div>
             <ul class="rounded">
-                <li class="arrow" id="M1-1"><a href="#match">Beeston Fields 2  <small class="M1-1D"></small></a></li>
-                <li class="arrow" id="M1-2"><a href="#match">Carlton 3  <small class="M1-2D"></small></a></li>
-                <li class="arrow" id="M1-3"><a href="#match">David Lloyd WB  <small class="M1-3D"></small></a></li>
-                <li class="arrow" id="M1-4"><a href="#match">East Leake 2  <small class="M1-4D"></small></a></li>
-                <li class="arrow" id="M1-5"><a href="#match">Naseeb 2  <small class="M1-5D"></small></a></li>
-                <li class="arrow" id="M1-6"><a href="#match">University 3  <small class="M1-6D"></small></a></li>
+                <li class="arrow" id="M1-1"><a href="#match">Crusader  <small class="M1-1D"></small></a></li>
+                <li class="arrow" id="M1-2"><a href="#match">East Leake 1  <small class="M1-2D"></small></a></li>
+                <li class="arrow" id="M1-3"><a href="#match">Mansfield Oaktree  <small class="M1-3D"></small></a></li>
+                <li class="arrow" id="M1-4"><a href="#match">Phoenixwood 1  <small class="M1-4D"></small></a></li>
+                <li class="arrow" id="M1-5"><a href="#match">University 3  <small class="M1-5D"></small></a></li>
+                <li class="arrow" id="M1-6"><a href="#match">University Staff  <small class="M1-6D"></small></a></li>
             </ul>
         </div>
 
@@ -127,11 +128,11 @@
             </div>
             <ul class="rounded">
                 <li class="arrow" id="M2-1"><a href="#match">Beeston Valley 2  <small class="M2-1D"></small></a></li>
-                <li class="arrow" id="M2-2"><a href="#match">David Lloyd Aspley 1  <small class="M2-2D"></small></a></li>
+                <li class="arrow" id="M2-2"><a href="#match">Carlton 3  <small class="M2-2D"></small></a></li>
                 <li class="arrow" id="M2-3"><a href="#match">East Leake 3  <small class="M2-3D"></small></a></li>
                 <li class="arrow" id="M2-4"><a href="#match">Nottingham Vets 2  <small class="M2-4D"></small></a></li>
-                <li class="arrow" id="M2-5"><a href="#match">West Bridgford &amp; LE 3  <small class="M2-5D"></small></a></li>
-                <li class="arrow" id="M2-6"><a href="#match">Woodborough 1  <small class="M2-6D"></small></a></li>
+                <li class="arrow" id="M2-5"><a href="#match">Rushcliffe Arena 1  <small class="M2-5D"></small></a></li>
+                <li class="arrow" id="M2-6"><a href="#match">Unity 1  <small class="M2-6D"></small></a></li>
             </ul>
         </div>
 
@@ -141,12 +142,13 @@
                 <a href="#" class="back">Teams</a>
             </div>
             <ul class="rounded">
-                <li class="arrow" id="M3-1"><a href="#match">Beeston Valley 3  <small class="M3-1D"></small></a></li>
-                <li class="arrow" id="M3-2"><a href="#match">East Leake 4  <small class="M3-2D"></small></a></li>
-                <li class="arrow" id="M3-3"><a href="#match">Forest 3  <small class="M3-3D"></small></a></li>
+                <li class="arrow" id="M3-1"><a href="#match">Arboretum 3  <small class="M3-1D"></small></a></li>
+                <li class="arrow" id="M3-2"><a href="#match">Beeston Valley 3  <small class="M3-2D"></small></a></li>
+                <li class="arrow" id="M3-3"><a href="#match">David Lloyd Aspley 3  <small class="M3-3D"></small></a></li>
                 <li class="arrow" id="M3-4"><a href="#match">Redhill 2  <small class="M3-4D"></small></a></li>
-                <li class="arrow" id="M3-5"><a href="#match">Unity  <small class="M3-5D"></small></a></li>
-                <li class="arrow" id="M3-6"><a href="#match">Woodborough 2  <small class="M3-6D"></small></a></li>
+                <li class="arrow" id="M3-5"><a href="#match">Rushcliffe Arena 2  <small class="M3-5D"></small></a></li>
+                <li class="arrow" id="M3-6"><a href="#match">Trent Uni Students 2  <small class="M3-6D"></small></a></li>
+                <li class="arrow" id="M3-7"><a href="#match">Woodborough  <small class="M3-7D"></small></a></li>
             </ul>
         </div>
 
@@ -156,11 +158,11 @@
                 <a href="#" class="back">Teams</a>
             </div>
             <ul class="rounded">
-                <li class="arrow" id="X1-1"><a href="#match">Beeston Fields 3  <small class="X1-1D"></small></a></li>
-                <li class="arrow" id="X1-2"><a href="#match">Boots 1  <small class="X1-2D"></small></a></li>
-                <li class="arrow" id="X1-3"><a href="#match">Byron 4  <small class="X1-3D"></small></a></li>
-                <li class="arrow" id="X1-4"><a href="#match">David Lloyd Aspley 1  <small class="X1-4D"></small></a></li>
-                <li class="arrow" id="X1-5"><a href="#match">Mapperley Park 4  <small class="X1-5D"></small></a></li>
+                <li class="arrow" id="X1-1"><a href="#match">Beeston Fields 2  <small class="X1-1D"></small></a></li>
+                <li class="arrow" id="X1-2"><a href="#match">Bingham 4  <small class="X1-2D"></small></a></li>
+                <li class="arrow" id="X1-3"><a href="#match">Carlton 1  <small class="X1-3D"></small></a></li>
+                <li class="arrow" id="X1-4"><a href="#match">East Leake 1  <small class="X1-4D"></small></a></li>
+                <li class="arrow" id="X1-5"><a href="#match">Nottingham Vets 1  <small class="X1-5D"></small></a></li>
                 <li class="arrow" id="X1-6"><a href="#match">University 3  <small class="X1-6D"></small></a></li>
             </ul>
         </div>
@@ -171,12 +173,27 @@
                 <a href="#" class="back">Teams</a>
             </div>
             <ul class="rounded">
-                <li class="arrow" id="X2-1"><a href="#match">Beeston Valley 2  <small class="X2-1D"></small></a></li>
-                <li class="arrow" id="X2-2"><a href="#match">David Lloyd Aspley 2  <small class="X2-2D"></small></a></li>
-                <li class="arrow" id="X2-3"><a href="#match">East Leake 3  <small class="X2-3D"></small></a></li>
-                <li class="arrow" id="X2-4"><a href="#match">Kimberley 2  <small class="X2-4D"></small></a></li>
-                <li class="arrow" id="X2-5"><a href="#match">Phoenixwood 4  <small class="X2-5D"></small></a></li>
+                <li class="arrow" id="X2-1"><a href="#match">Beeston Fields 3  <small class="X2-1D"></small></a></li>
+                <li class="arrow" id="X2-2"><a href="#match">Boots 1  <small class="X2-2D"></small></a></li>
+                <li class="arrow" id="X2-3"><a href="#match">David Lloyd Aspley  <small class="X2-3D"></small></a></li>
+                <li class="arrow" id="X2-4"><a href="#match">Nottingham Vets 2  <small class="X2-4D"></small></a></li>
+                <li class="arrow" id="X2-5"><a href="#match">Rushcliffe Arena 1  <small class="X2-5D"></small></a></li>
                 <li class="arrow" id="X2-6"><a href="#match">Southwell Centre 1  <small class="X2-6D"></small></a></li>
+            </ul>
+        </div>
+
+        <div id="X4" class="fixtures">
+            <div class="toolbar">
+                <h1>Mixed 4</h1>
+                <a href="#" class="back">Teams</a>
+            </div>
+            <ul class="rounded">
+                <li class="arrow" id="X4-1"><a href="#match">Arboretum 2  <small class="X4-1D"></small></a></li>
+                <li class="arrow" id="X4-2"><a href="#match">Boots 3  <small class="X4-2D"></small></a></li>
+                <li class="arrow" id="X4-3"><a href="#match">Byron 5  <small class="X4-3D"></small></a></li>
+                <li class="arrow" id="X4-4"><a href="#match">Kimberley 3  <small class="X4-4D"></small></a></li>
+                <li class="arrow" id="X4-5"><a href="#match">Nottingham Vets 3  <small class="X4-5D"></small></a></li>
+                <li class="arrow" id="X4-6"><a href="#match">Unity  <small class="X4-6D"></small></a></li>
             </ul>
         </div>
 
@@ -187,11 +204,12 @@
             </div>
             <ul class="rounded">
                 <li class="arrow" id="X3-1"><a href="#match">Beeston Valley 3  <small class="X3-1D"></small></a></li>
-                <li class="arrow" id="X3-2"><a href="#match">Carlton 3  <small class="X3-2D"></small></a></li>
-                <li class="arrow" id="X3-3"><a href="#match">Phoenixwood 5  <small class="X3-3D"></small></a></li>
-                <li class="arrow" id="X3-4"><a href="#match">Rushcliffe Arena 2  <small class="X3-4D"></small></a></li>
-                <li class="arrow" id="X3-5"><a href="#match">Unity  <small class="X3-5D"></small></a></li>
-                <li class="arrow" id="X3-6"><a href="#match">University 4  <small class="X3-6D"></small></a></li>
+                <li class="arrow" id="X3-2"><a href="#match">Kimberley 2  <small class="X3-2D"></small></a></li>
+                <li class="arrow" id="X3-3"><a href="#match">Nottingham Vets 4  <small class="X3-3D"></small></a></li>
+                <li class="arrow" id="X3-4"><a href="#match">Phoenixwood 5  <small class="X3-4D"></small></a></li>
+                <li class="arrow" id="X3-5"><a href="#match">Redhill 2  <small class="X3-5D"></small></a></li>
+                <li class="arrow" id="X3-6"><a href="#match">Rushcliffe Arena 2  <small class="X3-6D"></small></a></li>
+                <li class="arrow" id="X3-7"><a href="#match">Trent Uni Students  <small class="X3-7D"></small></a></li>
             </ul>
         </div>
 
@@ -201,11 +219,12 @@
                 <a href="#" class="back">Teams</a>
             </div>
             <ul class="rounded">
-                <li class="arrow" id="L1-1"><a href="#match">Beeston Valley 2  <small class="L1-1D"></small></a></li>
-                <li class="arrow" id="L1-2"><a href="#match">Byron 2  <small class="L1-2D"></small></a></li>
-                <li class="arrow" id="L1-3"><a href="#match">St Giles 2  <small class="L1-3D"></small></a></li>
-                <li class="arrow" id="L1-4"><a href="#match">Trent Uni Students  <small class="L1-4D"></small></a></li>
-                <li class="arrow" id="L1-5"><a href="#match">University 2  <small class="L1-5D"></small></a></li>
+                <li class="arrow" id="L1-1"><a href="#match">Arboretum  <small class="L1-1D"></small></a></li>
+                <li class="arrow" id="L1-2"><a href="#match">Beeston Valley 1  <small class="L1-2D"></small></a></li>
+                <li class="arrow" id="L1-3"><a href="#match">Boots  <small class="L1-3D"></small></a></li>
+                <li class="arrow" id="L1-4"><a href="#match">Byron 2  <small class="L1-4D"></small></a></li>
+                <li class="arrow" id="L1-5"><a href="#match">Kimberley  <small class="L1-5D"></small></a></li>
+                <li class="arrow" id="L1-6"><a href="#match">University 2  <small class="L1-6D"></small></a></li>
             </ul>
         </div>
 
@@ -215,11 +234,12 @@
                 <a href="#" class="back">Teams</a>
             </div>
             <ul class="rounded">
-                <li class="arrow" id="L2-1"><a href="#match">Beeston Valley 2  <small class="L2-1D"></small></a></li>
-                <li class="arrow" id="L2-2"><a href="#match">Byron 2  <small class="L2-2D"></small></a></li>
-                <li class="arrow" id="L2-3"><a href="#match">St Giles 1  <small class="L2-3D"></small></a></li>
-                <li class="arrow" id="L2-4"><a href="#match">Trent Uni Students  <small class="L2-4D"></small></a></li>
-                <li class="arrow" id="L2-5"><a href="#match">University 2  <small class="L2-5D"></small></a></li>
+                <li class="arrow" id="L2-1"><a href="#match">Beeston Fields 2  <small class="L2-1D"></small></a></li>
+                <li class="arrow" id="L2-2"><a href="#match">Beeston Valley 2  <small class="L2-2D"></small></a></li>
+                <li class="arrow" id="L2-3"><a href="#match">Carlton 2  <small class="L2-3D"></small></a></li>
+                <li class="arrow" id="L2-4"><a href="#match">Redhill  <small class="L2-4D"></small></a></li>
+                <li class="arrow" id="L2-5"><a href="#match">Rushcliffe Arena  <small class="L2-5D"></small></a></li>
+                <li class="arrow" id="L2-6"><a href="#match">Trent Uni Students  <small class="L2-6D"></small></a></li>
             </ul>
         </div>
 
@@ -321,7 +341,7 @@
             		<td></td>
             		<td id="rubbertit">Rubbers</td>
             		<td id="gametit">Games</td>
-            		<td id="acetit">Aces</td>
+            		<td id="acetit">ACES</td>
             	</tr>
             	<tr>
             		<td id="homeClub"></td>
