--- a/live/club_webapps/trent_uni_students.html
+++ b/live/club_webapps/trent_uni_students.html
@@ -59,7 +59,7 @@
                 <a class="button slideup" id="infoButton" href="#about">About</a>
             </div>
 
-            <h1>Trent Uni Students</h1>
+            <h1 id="ourClubName">Trent Uni Students</h1>
 	    <div id="loader">
 	    	<div class="loader">
 			<img src="lib/loader.gif" alt="Loading cache..." width="31" height="31" />
@@ -94,25 +94,58 @@
             </div>
             <ul class="rounded">
 
-                <li class="arrow"><a href="#M">Mens  <small> Division 6A</small></a></li>
+                <li class="arrow"><a href="#M1">Mens 1 <small> Division 5A</small></a></li>
+                <li class="arrow"><a href="#M2">Mens 2 <small> Division 5B</small></a></li>
+                <li class="arrow"><a href="#X">Mixed  <small> Division 5B</small></a></li>
                 <li class="arrow"><a href="#L">Ladies  <small> Division 4</small></a></li>
             </ul>
         </div>
 
-        <div id="M" class="fixtures">
+        <div id="M1" class="fixtures">
             <div class="toolbar">
-                <h1>Mens </h1>
+                <h1>Mens 1</h1>
                 <a href="#" class="back">Teams</a>
             </div>
             <ul class="rounded">
-                <li class="arrow" id="M-1"><a href="#match">Arboretum 3  <small class="M-1D"></small></a></li>
-                <li class="arrow" id="M-2"><a href="#match">Arboretum 3  <small class="M-2D"></small></a></li>
-                <li class="arrow" id="M-3"><a href="#match">Experian  <small class="M-3D"></small></a></li>
-                <li class="arrow" id="M-4"><a href="#match">Experian  <small class="M-4D"></small></a></li>
-                <li class="arrow" id="M-5"><a href="#match">Rushcliffe Arena 2  <small class="M-5D"></small></a></li>
-                <li class="arrow" id="M-6"><a href="#match">Rushcliffe Arena 2  <small class="M-6D"></small></a></li>
-                <li class="arrow" id="M-7"><a href="#match">Southwell Centre 3  <small class="M-7D"></small></a></li>
-                <li class="arrow" id="M-8"><a href="#match">Southwell Centre 3  <small class="M-8D"></small></a></li>
+                <li class="arrow" id="M1-1"><a href="#match">Arboretum 2  <small class="M1-1D"></small></a></li>
+                <li class="arrow" id="M1-2"><a href="#match">David Lloyd Aspley 2  <small class="M1-2D"></small></a></li>
+                <li class="arrow" id="M1-3"><a href="#match">Experian  <small class="M1-3D"></small></a></li>
+                <li class="arrow" id="M1-4"><a href="#match">Kimberley 2  <small class="M1-4D"></small></a></li>
+                <li class="arrow" id="M1-5"><a href="#match">Phoenixwood 3  <small class="M1-5D"></small></a></li>
+                <li class="arrow" id="M1-6"><a href="#match">Southwell Centre 3  <small class="M1-6D"></small></a></li>
+                <li class="arrow" id="M1-7"><a href="#match">Unity 2  <small class="M1-7D"></small></a></li>
+            </ul>
+        </div>
+
+        <div id="M2" class="fixtures">
+            <div class="toolbar">
+                <h1>Mens 2</h1>
+                <a href="#" class="back">Teams</a>
+            </div>
+            <ul class="rounded">
+                <li class="arrow" id="M2-1"><a href="#match">Arboretum 3  <small class="M2-1D"></small></a></li>
+                <li class="arrow" id="M2-2"><a href="#match">Beeston Valley 3  <small class="M2-2D"></small></a></li>
+                <li class="arrow" id="M2-3"><a href="#match">David Lloyd Aspley 3  <small class="M2-3D"></small></a></li>
+                <li class="arrow" id="M2-4"><a href="#match">Redhill 2  <small class="M2-4D"></small></a></li>
+                <li class="arrow" id="M2-5"><a href="#match">Rushcliffe Arena 2  <small class="M2-5D"></small></a></li>
+                <li class="arrow" id="M2-6"><a href="#match">St Giles 3  <small class="M2-6D"></small></a></li>
+                <li class="arrow" id="M2-7"><a href="#match">Woodborough  <small class="M2-7D"></small></a></li>
+            </ul>
+        </div>
+
+        <div id="X" class="fixtures">
+            <div class="toolbar">
+                <h1>Mixed </h1>
+                <a href="#" class="back">Teams</a>
+            </div>
+            <ul class="rounded">
+                <li class="arrow" id="X-1"><a href="#match">Beeston Valley 3  <small class="X-1D"></small></a></li>
+                <li class="arrow" id="X-2"><a href="#match">Kimberley 2  <small class="X-2D"></small></a></li>
+                <li class="arrow" id="X-3"><a href="#match">Nottingham Vets 4  <small class="X-3D"></small></a></li>
+                <li class="arrow" id="X-4"><a href="#match">Phoenixwood 5  <small class="X-4D"></small></a></li>
+                <li class="arrow" id="X-5"><a href="#match">Redhill 2  <small class="X-5D"></small></a></li>
+                <li class="arrow" id="X-6"><a href="#match">Rushcliffe Arena 2  <small class="X-6D"></small></a></li>
+                <li class="arrow" id="X-7"><a href="#match">St Giles 3  <small class="X-7D"></small></a></li>
             </ul>
         </div>
 
@@ -122,11 +155,12 @@
                 <a href="#" class="back">Teams</a>
             </div>
             <ul class="rounded">
-                <li class="arrow" id="L-1"><a href="#match">Beeston Valley 2  <small class="L-1D"></small></a></li>
-                <li class="arrow" id="L-2"><a href="#match">Byron 2  <small class="L-2D"></small></a></li>
-                <li class="arrow" id="L-3"><a href="#match">St Giles 1  <small class="L-3D"></small></a></li>
-                <li class="arrow" id="L-4"><a href="#match">St Giles 2  <small class="L-4D"></small></a></li>
-                <li class="arrow" id="L-5"><a href="#match">University 2  <small class="L-5D"></small></a></li>
+                <li class="arrow" id="L-1"><a href="#match">Beeston Fields 2  <small class="L-1D"></small></a></li>
+                <li class="arrow" id="L-2"><a href="#match">Beeston Valley 2  <small class="L-2D"></small></a></li>
+                <li class="arrow" id="L-3"><a href="#match">Carlton 2  <small class="L-3D"></small></a></li>
+                <li class="arrow" id="L-4"><a href="#match">Redhill  <small class="L-4D"></small></a></li>
+                <li class="arrow" id="L-5"><a href="#match">Rushcliffe Arena  <small class="L-5D"></small></a></li>
+                <li class="arrow" id="L-6"><a href="#match">St Giles 2  <small class="L-6D"></small></a></li>
             </ul>
         </div>
 
@@ -228,7 +262,7 @@
             		<td></td>
             		<td id="rubbertit">Rubbers</td>
             		<td id="gametit">Games</td>
-            		<td id="acetit">Aces</td>
+            		<td id="acetit">ACES</td>
             	</tr>
             	<tr>
             		<td id="homeClub"></td>
