--- a/live/club_webapps/west_bridgford_le.html
+++ b/live/club_webapps/west_bridgford_le.html
@@ -59,7 +59,7 @@
                 <a class="button slideup" id="infoButton" href="#about">About</a>
             </div>
 
-            <h1>West Bridgford &amp; LE</h1>
+            <h1 id="ourClubName">West Bridgford &amp; LE</h1>
 	    <div id="loader">
 	    	<div class="loader">
 			<img src="lib/loader.gif" alt="Loading cache..." width="31" height="31" />
@@ -96,9 +96,9 @@
 
                 <li class="arrow"><a href="#M1">Mens 1 <small>Premier </small></a></li>
                 <li class="arrow"><a href="#M2">Mens 2 <small>Premier </small></a></li>
-                <li class="arrow"><a href="#M3">Mens 3 <small> Division 4A</small></a></li>
+                <li class="arrow"><a href="#M3">Mens 3 <small> Division 3B</small></a></li>
                 <li class="arrow"><a href="#X1">Mixed 1 <small>Premier </small></a></li>
-                <li class="arrow"><a href="#X2">Mixed 2 <small> Division 1</small></a></li>
+                <li class="arrow"><a href="#X2">Mixed 2 <small>Premier </small></a></li>
                 <li class="arrow"><a href="#X3">Mixed 3 <small> Division 2B</small></a></li>
                 <li class="arrow"><a href="#L">Ladies  <small>Premier </small></a></li>
             </ul>
@@ -113,9 +113,9 @@
                 <li class="arrow" id="M1-1"><a href="#match">Bingham 1  <small class="M1-1D"></small></a></li>
                 <li class="arrow" id="M1-2"><a href="#match">Bingham 2  <small class="M1-2D"></small></a></li>
                 <li class="arrow" id="M1-3"><a href="#match">Byron 1  <small class="M1-3D"></small></a></li>
-                <li class="arrow" id="M1-4"><a href="#match">Forest 1  <small class="M1-4D"></small></a></li>
+                <li class="arrow" id="M1-4"><a href="#match">Byron 2  <small class="M1-4D"></small></a></li>
                 <li class="arrow" id="M1-5"><a href="#match">Rolls Royce 1  <small class="M1-5D"></small></a></li>
-                <li class="arrow" id="M1-6"><a href="#match">Rolls Royce 2  <small class="M1-6D"></small></a></li>
+                <li class="arrow" id="M1-6"><a href="#match">University 1  <small class="M1-6D"></small></a></li>
                 <li class="arrow" id="M1-7"><a href="#match">West Bridgford &amp; LE 2  <small class="M1-7D"></small></a></li>
             </ul>
         </div>
@@ -129,9 +129,9 @@
                 <li class="arrow" id="M2-1"><a href="#match">Bingham 1  <small class="M2-1D"></small></a></li>
                 <li class="arrow" id="M2-2"><a href="#match">Bingham 2  <small class="M2-2D"></small></a></li>
                 <li class="arrow" id="M2-3"><a href="#match">Byron 1  <small class="M2-3D"></small></a></li>
-                <li class="arrow" id="M2-4"><a href="#match">Forest 1  <small class="M2-4D"></small></a></li>
+                <li class="arrow" id="M2-4"><a href="#match">Byron 2  <small class="M2-4D"></small></a></li>
                 <li class="arrow" id="M2-5"><a href="#match">Rolls Royce 1  <small class="M2-5D"></small></a></li>
-                <li class="arrow" id="M2-6"><a href="#match">Rolls Royce 2  <small class="M2-6D"></small></a></li>
+                <li class="arrow" id="M2-6"><a href="#match">University 1  <small class="M2-6D"></small></a></li>
                 <li class="arrow" id="M2-7"><a href="#match">West Bridgford &amp; LE 1  <small class="M2-7D"></small></a></li>
             </ul>
         </div>
@@ -142,12 +142,12 @@
                 <a href="#" class="back">Teams</a>
             </div>
             <ul class="rounded">
-                <li class="arrow" id="M3-1"><a href="#match">Beeston Valley 2  <small class="M3-1D"></small></a></li>
-                <li class="arrow" id="M3-2"><a href="#match">David Lloyd Aspley 1  <small class="M3-2D"></small></a></li>
-                <li class="arrow" id="M3-3"><a href="#match">East Leake 3  <small class="M3-3D"></small></a></li>
-                <li class="arrow" id="M3-4"><a href="#match">Nottingham Vets 2  <small class="M3-4D"></small></a></li>
-                <li class="arrow" id="M3-5"><a href="#match">St Giles 2  <small class="M3-5D"></small></a></li>
-                <li class="arrow" id="M3-6"><a href="#match">Woodborough 1  <small class="M3-6D"></small></a></li>
+                <li class="arrow" id="M3-1"><a href="#match">Arboretum 1  <small class="M3-1D"></small></a></li>
+                <li class="arrow" id="M3-2"><a href="#match">Boots 2  <small class="M3-2D"></small></a></li>
+                <li class="arrow" id="M3-3"><a href="#match">Carlton 2  <small class="M3-3D"></small></a></li>
+                <li class="arrow" id="M3-4"><a href="#match">East Leake 2  <small class="M3-4D"></small></a></li>
+                <li class="arrow" id="M3-5"><a href="#match">Naseeb 2  <small class="M3-5D"></small></a></li>
+                <li class="arrow" id="M3-6"><a href="#match">Southwell Centre 1  <small class="M3-6D"></small></a></li>
             </ul>
         </div>
 
@@ -157,13 +157,13 @@
                 <a href="#" class="back">Teams</a>
             </div>
             <ul class="rounded">
-                <li class="arrow" id="X1-1"><a href="#match">Beeston Fields 1  <small class="X1-1D"></small></a></li>
-                <li class="arrow" id="X1-2"><a href="#match">Bingham 1  <small class="X1-2D"></small></a></li>
-                <li class="arrow" id="X1-3"><a href="#match">Bingham 2  <small class="X1-3D"></small></a></li>
-                <li class="arrow" id="X1-4"><a href="#match">Byron 1  <small class="X1-4D"></small></a></li>
-                <li class="arrow" id="X1-5"><a href="#match">Byron 2  <small class="X1-5D"></small></a></li>
-                <li class="arrow" id="X1-6"><a href="#match">Forest 1  <small class="X1-6D"></small></a></li>
-                <li class="arrow" id="X1-7"><a href="#match">University 1  <small class="X1-7D"></small></a></li>
+                <li class="arrow" id="X1-1"><a href="#match">Bingham 1  <small class="X1-1D"></small></a></li>
+                <li class="arrow" id="X1-2"><a href="#match">Bingham 2  <small class="X1-2D"></small></a></li>
+                <li class="arrow" id="X1-3"><a href="#match">Byron 1  <small class="X1-3D"></small></a></li>
+                <li class="arrow" id="X1-4"><a href="#match">Byron 2  <small class="X1-4D"></small></a></li>
+                <li class="arrow" id="X1-5"><a href="#match">Mapperley Park 1  <small class="X1-5D"></small></a></li>
+                <li class="arrow" id="X1-6"><a href="#match">University 1  <small class="X1-6D"></small></a></li>
+                <li class="arrow" id="X1-7"><a href="#match">West Bridgford &amp; LE 2  <small class="X1-7D"></small></a></li>
             </ul>
         </div>
 
@@ -173,13 +173,13 @@
                 <a href="#" class="back">Teams</a>
             </div>
             <ul class="rounded">
-                <li class="arrow" id="X2-1"><a href="#match">Bingham 3  <small class="X2-1D"></small></a></li>
-                <li class="arrow" id="X2-2"><a href="#match">East Leake 1  <small class="X2-2D"></small></a></li>
-                <li class="arrow" id="X2-3"><a href="#match">Forest 2  <small class="X2-3D"></small></a></li>
-                <li class="arrow" id="X2-4"><a href="#match">Mansfield Oaktree  <small class="X2-4D"></small></a></li>
+                <li class="arrow" id="X2-1"><a href="#match">Bingham 1  <small class="X2-1D"></small></a></li>
+                <li class="arrow" id="X2-2"><a href="#match">Bingham 2  <small class="X2-2D"></small></a></li>
+                <li class="arrow" id="X2-3"><a href="#match">Byron 1  <small class="X2-3D"></small></a></li>
+                <li class="arrow" id="X2-4"><a href="#match">Byron 2  <small class="X2-4D"></small></a></li>
                 <li class="arrow" id="X2-5"><a href="#match">Mapperley Park 1  <small class="X2-5D"></small></a></li>
-                <li class="arrow" id="X2-6"><a href="#match">Phoenixwood 1  <small class="X2-6D"></small></a></li>
-                <li class="arrow" id="X2-7"><a href="#match">University 2  <small class="X2-7D"></small></a></li>
+                <li class="arrow" id="X2-6"><a href="#match">University 1  <small class="X2-6D"></small></a></li>
+                <li class="arrow" id="X2-7"><a href="#match">West Bridgford &amp; LE 1  <small class="X2-7D"></small></a></li>
             </ul>
         </div>
 
@@ -190,11 +190,11 @@
             </div>
             <ul class="rounded">
                 <li class="arrow" id="X3-1"><a href="#match">Bingham 5  <small class="X3-1D"></small></a></li>
-                <li class="arrow" id="X3-2"><a href="#match">Forest 3  <small class="X3-2D"></small></a></li>
-                <li class="arrow" id="X3-3"><a href="#match">Mapperley Park 3  <small class="X3-3D"></small></a></li>
-                <li class="arrow" id="X3-4"><a href="#match">Nottingham Vets 2  <small class="X3-4D"></small></a></li>
+                <li class="arrow" id="X3-2"><a href="#match">Byron 3  <small class="X3-2D"></small></a></li>
+                <li class="arrow" id="X3-3"><a href="#match">Forest 3  <small class="X3-3D"></small></a></li>
+                <li class="arrow" id="X3-4"><a href="#match">Mapperley Park 3  <small class="X3-4D"></small></a></li>
                 <li class="arrow" id="X3-5"><a href="#match">Phoenixwood 2  <small class="X3-5D"></small></a></li>
-                <li class="arrow" id="X3-6"><a href="#match">Rushcliffe Arena 1  <small class="X3-6D"></small></a></li>
+                <li class="arrow" id="X3-6"><a href="#match">Rolls Royce  <small class="X3-6D"></small></a></li>
             </ul>
         </div>
 
@@ -206,10 +206,10 @@
             <ul class="rounded">
                 <li class="arrow" id="L-1"><a href="#match">Beeston Fields 1  <small class="L-1D"></small></a></li>
                 <li class="arrow" id="L-2"><a href="#match">Bingham 1  <small class="L-2D"></small></a></li>
-                <li class="arrow" id="L-3"><a href="#match">Bingham 2  <small class="L-3D"></small></a></li>
-                <li class="arrow" id="L-4"><a href="#match">Byron 1  <small class="L-4D"></small></a></li>
+                <li class="arrow" id="L-3"><a href="#match">Byron 1  <small class="L-3D"></small></a></li>
+                <li class="arrow" id="L-4"><a href="#match">East Leake  <small class="L-4D"></small></a></li>
                 <li class="arrow" id="L-5"><a href="#match">Forest 1  <small class="L-5D"></small></a></li>
-                <li class="arrow" id="L-6"><a href="#match">Nottingham Vets 1  <small class="L-6D"></small></a></li>
+                <li class="arrow" id="L-6"><a href="#match">Phoenixwood 1  <small class="L-6D"></small></a></li>
             </ul>
         </div>
 
@@ -311,7 +311,7 @@
             		<td></td>
             		<td id="rubbertit">Rubbers</td>
             		<td id="gametit">Games</td>
-            		<td id="acetit">Aces</td>
+            		<td id="acetit">ACES</td>
             	</tr>
             	<tr>
             		<td id="homeClub"></td>
